New Config- Sensorless and TAP

--- a/Hardware/Axis/XY_Steppers.cfg
+++ b/Hardware/Axis/XY_Steppers.cfg
@@ -1,3 +1,4 @@
+#Dovete staccare i collegamenti all'enstop dalla octopus altrimenti non funziona
 #####################################################################
 #   X/Y Stepper Settings
 #####################################################################
@@ -13,13 +14,13 @@ enable_pin: !PG2
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
-#endstop_pin: tmc2209_stepper_y:virtual_endstop
-endstop_pin: ^PG6
+endstop_pin: tmc2209_stepper_y:virtual_endstop
+#endstop_pin: ^PG6
 position_min: 0
 ##--------------------------------------------------------------------
 
 ##  Uncomment below for 250mm build
-position_endstop: 250
+position_endstop: 246
 position_max: 250
 
 ##  Uncomment for 300mm build
@@ -31,7 +32,7 @@ position_max: 250
 #position_max: 350
 
 ##--------------------------------------------------------------------
-homing_speed: 30   #Max 100
+homing_speed: 20   #Max 100
 homing_retract_dist: 5
 homing_positive_dir: true
 
@@ -40,10 +41,9 @@ homing_positive_dir: true
 uart_pin: PF2
 interpolate: False
 run_current: 0.8
-sense_resistor: 0.110
 stealthchop_threshold: 0
-#diag_pin: ^PG12
-#driver_SGTHRS: 50
+diag_pin: ^PG12
+driver_SGTHRS: 59   #questo valore dovete trovarlo partendo da 255 e scendendo fino a quando la home non funziona
 
 ##  A Stepper - Right
 ##  Connected to MOTOR_1
@@ -58,8 +58,8 @@ enable_pin: !PA0
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
-#endstop_pin: tmc2209_stepper_x:virtual_endstop
-endstop_pin: ^PG15  
+endstop_pin: tmc2209_stepper_x:virtual_endstop
+#endstop_pin: ^PG12  
 position_min: 0
 ##--------------------------------------------------------------------
 
@@ -86,7 +86,6 @@ homing_positive_dir: true
 uart_pin: PC7
 interpolate: False
 run_current: 0.8
-sense_resistor: 0.110
 stealthchop_threshold: 0
-#diag_pin: ^PG11
-#driver_SGTHRS: 60
+diag_pin: ^PG11
+driver_SGTHRS: 59   #questo valore dovete trovarlo partendo da 255 e scendendo fino a quando la home non funziona
