--- a/Hardware/Axis/Z_Steppers.cfg
+++ b/Hardware/Axis/Z_Steppers.cfg
@@ -31,9 +31,9 @@ homing_speed: 8.0 # Leadscrews are slower than 2.4, 10 is a recommended max.
 second_homing_speed: 3
 homing_retract_dist: 3
 
-[safe_z_home]
-home_xy_position: 125, 125
-z_hop: 10
+# [safe_z_home]
+# home_xy_position: 125, 125
+# z_hop: 5
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z]
