--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -15,11 +15,8 @@ params: {"script":"SHUTDOWN"}
 
 
 #~# --- Do not edit below this line. This section is auto generated --- #~#
-
 #~#
-#~# [main]
-#~# print_sort_dir = date_desc
-#~# 
 #~# [graph Printer]
 #~# temperature_sensor chamber = False
+#~# heater_bed = False
 #~#
