--- a/Macros/base_macros.cfg
+++ b/Macros/base_macros.cfg
@@ -109,6 +109,7 @@ gcode:
     DISPLAYTEXT TEXT="Heatsoaking, Please wait.."
     _TEMPERATURE_WAIT SENSOR="{SENSOR}" MINIMUM={MINIMUM} 
     DISPLAYTEXT TEXT="{MSG}"
+
 [gcode_macro TURN_OFF_HEATERS]
 rename_existing: _TURN_OFF_HEATERS
 gcode:
@@ -124,12 +125,15 @@ gcode:
     DISPLAYTEXT TEXT="Extruder Reset"
 
 
-# [gcode_macro PARK]
-# gcode:
+[gcode_macro PARK]
+gcode:
 
-#     DISPLAYTEXT TEXT="Parking"
-#     G0 X175 Y180 Z30  
-#     DISPLAYTEXT TEXT="Parked"
+    DISPLAYTEXT TEXT="Parking"
+    RELATIVE_COORDINATES
+    G1 Z10
+    ABSOLUTE_COORDINATES
+    G1 X125 Y5 F7800
+    DISPLAYTEXT TEXT="Parked"
     
 
 [gcode_macro PURGE]
