--- a/moonraker.conf
+++ b/moonraker.conf
@@ -1,8 +1,7 @@
 [server]
 host: 0.0.0.0
 port: 7125
-klippy_uds_address: /tmp/klippy_uds
-max_upload_size: 1024
+klippy_uds_address: /home/pi/printer_data/comms/klippy.sock
 
 [authorization]
 trusted_clients:
@@ -21,22 +20,17 @@ cors_domains:
     https://app.fluidd.xyz
     http://app.fluidd.xyz
 
-[database]
+[octoprint_compat]
 
 [file_manager]
-enable_object_processing: True
-
-[octoprint_compat]
+# post processing for object cancel. Not recommended for low resource SBCs such as a Pi Zero.  
+enable_object_processing: true
 
 [history]
 
-[announcements]
-subscriptions:
-    mainsail
-
 [update_manager]
+channel: dev
 refresh_interval: 168
-enable_auto_refresh: True
 
 [update_manager fluidd]
 type: web
@@ -50,47 +44,18 @@ channel: stable
 repo: mainsail-crew/mainsail
 path: ~/mainsail
 
-[update_manager KlipperScreen]
-type: git_repo
-path: /home/pi/KlipperScreen
-origin: https://github.com/jordanruthe/KlipperScreen.git
-env: /home/pi/.KlipperScreen-env/bin/python
-requirements: scripts/KlipperScreen-requirements.txt
-install_script: scripts/KlipperScreen-install.sh
-
-[update_manager client z_calibration]
-type: git_repo
-path: ~/klipper_z_calibration
-origin: https://github.com/protoloft/klipper_z_calibration.git
-install_script: install.sh
-managed_services: klipper
-
-[timelapse]
-
-[update_manager timelapse]
-type: git_repo
-primary_branch: main
-path: ~/moonraker-timelapse
-origin: https://github.com/mainsail-crew/moonraker-timelapse.git
-managed_services: klipper moonraker
-# Crowsnest update_manager entry
 [update_manager crowsnest]
 type: git_repo
 path: ~/crowsnest
 origin: https://github.com/mainsail-crew/crowsnest.git
-managed_services: crowsnest
+install_script: tools/install.sh
 
-[update_manager client sensorless_homing_helper]
+
+[update_manager KlipperScreen]
 type: git_repo
-primary_branch: main
-path: ~/sensorless_homing_helper
-origin: https://github.com/eamars/sensorless_homing_helper.git
-install_script: install.sh
-
-# [update_manager moonraker-telegram-bot]
-# type: git_repo
-# path: ~/moonraker-telegram-bot
-# origin: https://github.com/nlef/moonraker-telegram-bot.git
-# env: ~/moonraker-telegram-bot-env/bin/python
-# requirements: scripts/requirements.txt
-# install_script: scripts/install.sh
+path: ~/KlipperScreen
+origin: https://github.com/jordanruthe/KlipperScreen.git
+env: ~/.KlipperScreen-env/bin/python
+requirements: scripts/KlipperScreen-requirements.txt
+install_script: scripts/KlipperScreen-install.sh
+managed_services: KlipperScreen
