--- a/Hardware/kinematics.cfg
+++ b/Hardware/kinematics.cfg
@@ -6,3 +6,19 @@ max_accel: 80000             #Max 4000
 max_z_velocity: 30         #Max 15 for 12V TMC Drivers, can increase for 24V
 max_z_accel: 350
 square_corner_velocity: 5.0
+
+[idle_timeout]
+timeout: 1800
+
+[respond]
+default_type: echo
+#   Sets the default prefix of the "M118" and "RESPOND" output to one
+#   of the following:
+#       echo: "echo: " (This is the default)
+#       command: "// "
+#       error: "!! "
+#default_prefix: echo:
+#   Directly sets the default prefix. If present, this value will
+#   override the "default_type".
+
+[exclude_object]
