--- a/Macros/printer_macros.cfg
+++ b/Macros/printer_macros.cfg
@@ -14,10 +14,14 @@ gcode:
   {% if printer.toolhead.homed_axes != "xyz" %}
     HOME
   {% endif %}
+  
+[gcode_macro ZHOME]
+gcode:
+   STATUS_HOMING
+   G28 Z
 
 [gcode_macro G32]
 gcode:
-    #BED_MESH_CLEAR
     HOME
     #QUAD_GANTRY_LEVEL
     Z_TILT_ADJUST
@@ -34,7 +38,7 @@ gcode:
     
     CLEAR_PAUSE
     SET_TEMP HEATER="bed" TEMP={BED} WAIT=0; set final bed temp
-    #SET_TEMP HEATER="extruder" TEMP=150 WAIT=0; set hotend to 150 for heatsoak
+    SET_TEMP HEATER="extruder" TEMP=150 WAIT=0; set hotend to 150 for heatsoak
     DISPLAYTEXT TEXT={TOOL}
     CHOME
     
@@ -46,14 +50,15 @@ gcode:
     # SET_FAN
     Z_TILT_ADJUST
     #QUAD_GANTRY_LEVEL
-    HOME
-    #COMPUTE_MESH_PARAMETERS SIZE={FL_SIZE}
+    ZHOME
+    SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=0 ;wait final extruder temp
     #CLEAN_NOZZLE
-    #ADAPTIVE_BED_MESH
     #SET_FAN_SPEED FAN=nevermore SPEED=1
-    BED_MESH_PROFILE LOAD=Freddo
-    #BED_MESH_CALIBRATE
-    SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
+    #BED_MESH_PROFILE LOAD=Freddo
+    BED_MESH_CLEAR
+    BED_MESH_CALIBRATE
+
+    SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=0 ;wait final extruder temp
     #CLEAN_NOZZLE
     #CALIBRATE_Z
     RESET_EXTRUDER        
