--- a/printer.cfg
+++ b/printer.cfg
@@ -1,27 +1,24 @@
 [exclude_object]
 
-[include mainsail.cfg]
+
 
 ##################
 #### Hardware ####
 ##################
-[include Hardware/thermistors.cfg]
-[include Hardware/heaters.cfg]
-
-[include Hardware/fans.cfg]
+[include Hardware/hardware.cfg]
 [include Hardware/leds.cfg]
 [include Hardware/mcu.cfg]
 [include Hardware/kinematics.cfg]
-[include Hardware/misc.cfg]
-[include Hardware/adxl.cfg]
 [include Hardware/Axis/Z_Steppers.cfg]
 [include Hardware/Axis/XY_Steppers.cfg]
 [include Hardware/Axis/E_Stepper.cfg]
-[include Hardware/nozzle_scrub.cfg]
+[include Hardware/sb_leds.cfg]
+[include Hardware/sensorless.cfg]
 
 ################
 #### Macros ####
 ################
+[include Macros/nozzle_scrub.cfg]
 [include Macros/printer_macros.cfg]
 [include Macros/base_macros.cfg]
 [include Macros/shellCommands.cfg]
@@ -30,29 +27,19 @@
 [include Macros/Calibration/calibration.cfg]
 [include Macros/Calibration/pa_calibrate.cfg]
 [include Macros/shelly.cfg]
-[include Macros/LEDS/sb_leds.cfg]
+
 [include Macros/LEDS/case_leds.cfg]
 [include Macros/LEDS/sb_case_leds.cfg]
 [include Macros/LEDS/sb_leds_macros.cfg]
+[include Macros/mainsail.cfg]
 
-
-################
-#### Klicky ####
-################
-#[include Klicky/klicky-probe.cfg]
-#[include Macros/homing.cfg]
+[include Macros/Mesh/Adaptive_Mesh.cfg]
+[include Macros/Mesh/Adaptive_Purge.cfg]
 
 ################
 #### Probe ####
 ################
 [probe]
-##  Inductive Probe
-##  This probe is not used for Z height, only Quad Gantry Leveling
-
-# Select the probe port by type:
-## For the PROBE port. Will not work with Diode. May need pull-up resistor from signal to 24V.
-#pin: ~!PB7
-## For the DIAG_7 port. NEEDS BAT85 DIODE! Change to !PG15 if probe is NO.
 pin: EBBCan: PC13
 ## For Octopus Pro Probe port; NPN and PNP proximity switch types can be set by jumper
 #pin: ~!PC5
@@ -85,7 +72,7 @@ samples_tolerance_retries: 10
 #             TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
 #         {% endif %}
 #     {% endif %}
-[include Probe/Probe.cfg]
+[include Hardware/Probe/Probe.cfg]
 
 ################
 #### ERCF   ####
