--- a/Hardware/Axis/E_Stepper.cfg
+++ b/Hardware/Axis/E_Stepper.cfg
@@ -4,16 +4,27 @@
 #####################################################################
 
 [extruder]
-step_pin: EBBCan: PA9
-dir_pin: EBBCan: PA8
-enable_pin: !EBBCan: PA10
+nozzle_diameter: 0.600
+filament_diameter: 1.75
+min_temp: 0
+max_temp: 270
+control: pid
+pid_Kp: 20.386
+pid_Ki: 1.742
+pid_Kd: 59.630
+min_temp: 0
+max_temp: 270
+pressure_advance: 0.045
+pressure_advance_smooth_time: 0.040
+max_extrude_only_distance: 200
+max_extrude_cross_section: 50.0
+sensor_type: ATC Semitec 104NT-4-R025H42G
 microsteps: 32
 full_steps_per_rotation: 200                                       # Set to 200 for LDO 1.8° stepper motor, and set to 400 for OMC(StepperOnline) 0.9° stepper motor
 rotation_distance = 5.7                                            # See calibrating rotation_distance on extruders doc
 
 
 [tmc2209 extruder]
-uart_pin: EBBCan: PA13
 run_current: 0.5
 sense_resistor: 0.110
 stealthchop_threshold: 0
