--- a/Hardware/Probe/Probe.cfg
+++ b/Hardware/Probe/Probe.cfg
@@ -4,30 +4,16 @@
 #   Probe
 #####################################################################
 
-# [probe]
-# ##  Inductive Probe
-# ##  This probe is not used for Z height, only Quad Gantry Leveling
-
-# # Select the probe port by type:
-# ## For the PROBE port. Will not work with Diode. May need pull-up resistor from signal to 24V.
-# #pin: ~!PB7
-# ## For the DIAG_7 port. NEEDS BAT85 DIODE! Change to !PG15 if probe is NO.
-# pin: EBBCan: PC13
-# ## For Octopus Pro Probe port; NPN and PNP proximity switch types can be set by jumper
-# #pin: ~!PC5
-
-# #--------------------------------------------------------------------
-
-# x_offset: 0
-# y_offset: 0
-
-
-# speed: 2
-# samples:3 
-# samples_result: median
-# sample_retract_dist: 2.0
-# samples_tolerance: 0.01
-# samples_tolerance_retries: 5
+[probe]
+x_offset: 0
+y_offset: 0
+#z_offset: 0
+speed: 21
+samples:3 
+samples_result: median
+sample_retract_dist: 2.0
+samples_tolerance: 0.01
+samples_tolerance_retries: 10
 # activate_gcode:
 #     {% set PROBE_TEMP = 150 %}
 #     {% set MAX_TEMP = PROBE_TEMP + 5 %}
@@ -44,6 +30,7 @@
 #             TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
 #         {% endif %}
 #     {% endif %}
+
 
 [z_tilt]
 ##  Use Z_TILT_ADJUST to level the bed .
