--- a/moonraker.conf
+++ b/moonraker.conf
@@ -24,7 +24,7 @@ cors_domains:
 
 [file_manager]
 # post processing for object cancel. Not recommended for low resource SBCs such as a Pi Zero.  
-enable_object_processing: true
+enable_object_processing: True
 
 [history]
 
