--- a/Macros/printer_macros.cfg
+++ b/Macros/printer_macros.cfg
@@ -1,30 +1,7 @@
 ####################
 #####  Macros  #####
 ####################
-[gcode_macro HOME]
-gcode:
-    DISPLAYTEXT TEXT="Homing"
-    G28    
-    DISPLAYTEXT TEXT="Honey, Im Home!"
 
-# Conditional G28
-[gcode_macro CHOME]
-gcode:
-   STATUS_HOMING
-  {% if printer.toolhead.homed_axes != "xyz" %}
-    HOME
-  {% endif %}
-  
-[gcode_macro ZHOME]
-gcode:
-   STATUS_HOMING
-   G28 Z
-
-[gcode_macro G32]
-gcode:
-    HOME
-    #QUAD_GANTRY_LEVEL
-    Z_TILT_ADJUST
    
 [gcode_macro PRINT_START]
 gcode:
@@ -34,7 +11,6 @@ gcode:
     {% set ENCLOSURE = params.ENCLOSURE_TEMP|int %}
     {% set MATERIAL = params.MATERIAL|default("XXX")|string %}
     {% set TOOL = params.TOOL|default(-90)|int %}
-    {% set FL_SIZE = params.SIZE|default("0_0_0_0")|string %} # Get bounding box of the first layer
     
     CLEAR_PAUSE
     SET_TEMP HEATER="bed" TEMP={BED} WAIT=0; set final bed temp
@@ -45,28 +21,23 @@ gcode:
     
     SET_TEMP HEATER="bed" TEMP={BED} WAIT=1 ;wait final bed temp
     MATERIAL_PA MATERIAL={MATERIAL}
-    # SET_FAN SPEED=255 ;Turn fan on full blast to help circulate the air
-    # TEMPERATURE_WAIT SENSOR="temperature_sensor toolhead_pcb" MINIMUM={ENCLOSURE}
-    # SET_FAN
-    Z_TILT_ADJUST
-    #QUAD_GANTRY_LEVEL
+    _CZTILT
+    #_CQGL
     ZHOME
     SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=0 ;wait final extruder temp
     #CLEAN_NOZZLE
-    #SET_FAN_SPEED FAN=nevermore SPEED=1
+    Nevermore_on
     #BED_MESH_PROFILE LOAD=Freddo
     BED_MESH_CLEAR
     BED_MESH_CALIBRATE
 
     SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=0 ;wait final extruder temp
     #CLEAN_NOZZLE
-    #CALIBRATE_Z
     RESET_EXTRUDER        
     SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
 
     
     PRIME_LINE
-    #COUNTER_ON
     STATUS_READY
     DISPLAYTEXT TEXT="Printing..."
     
@@ -95,7 +66,8 @@ gcode:
     G0 X{th.axis_maximum.x//2} Y{th.axis_maximum.y - 2} F3600  ; park nozzle at rear
     SET_FAN                                
     
-    #BED_MESH_CLEAR
+    BED_MESH_CLEAR
+    SET_TEMP HEATER="bed" TEMP=40 WAIT=1
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
     
     CTRLFAN_OFF
@@ -111,13 +83,13 @@ gcode:
 ##############################
 ######### NEVERMORE ##########
 ##############################
-# [gcode_macro Nevermore_on]
-# gcode:
-#     Set_pin pin=nevermore value=.75
+[gcode_macro Nevermore_on]
+gcode:
+    SET_FAN_SPEED FAN=nevermore SPEED=1
 
-# [gcode_macro Nevermore_off]
-# gcode:
-#     Set_pin pin=nevermore value=0
+[gcode_macro Nevermore_off]
+gcode:
+    SET_FAN_SPEED FAN=nevermore SPEED=1
 
 ###################################
 ######### CONTROLLER FAN ##########
