--- a/printer.cfg
+++ b/printer.cfg
@@ -15,6 +15,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 [include Hardware/Axis/E_Stepper.cfg]
 [include Hardware/sb_leds.cfg]
 [include Hardware/sensorless.cfg]
+[include Hardware/toolboard.cfg]
 
 ################
 #### Macros ####
@@ -23,6 +24,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 [include Macros/printer_macros.cfg]
 [include Macros/base_macros.cfg]
 [include Macros/shellCommands.cfg]
+[include Macros/parking.cfg]
 
 [include Macros/Helpers/filament_swap.cfg]
 [include Macros/Calibration/calibration.cfg]
