--- a/Macros/base_macros.cfg
+++ b/Macros/base_macros.cfg
@@ -1,8 +1,51 @@
+[gcode_macro HOME]
+gcode:
+    DISPLAYTEXT TEXT="Homing"
+    G28    
+    DISPLAYTEXT TEXT="Honey, Im Home!"
+
+# Conditional G28
+[gcode_macro _CHOME]
+gcode:
+   STATUS_HOMING
+  {% if printer.toolhead.homed_axes != "xyz" %}
+    HOME
+  {% endif %}
+  
+[gcode_macro ZHOME]
+gcode:
+   STATUS_HOMING
+   G28 Z
+
+[gcode_macro G32]
+gcode:
+    HOME
+    #QUAD_GANTRY_LEVEL
+    Z_TILT_ADJUST
+
 [gcode_macro CENTER]
 gcode:
     $ G90
     G1 X125 Y125 Z30 F7800
-    
+
+[gcode_macro _CQGL]
+gcode:
+    {% if printer.quad_gantry_level.applied == False %}
+        {% if "xyz" not in printer.toolhead.homed_axes %}
+            G28 ; home if not already homed
+        {% endif %}
+        QUAD_GANTRY_LEVEL
+        G28 Z
+    {% endif %}
+
+[gcode_macro _CZTILT]
+gcode:
+    {% if printer.z_tilt.applied == False %}
+        _CHOME
+        Z_TILT_ADJUST
+        G28 Z
+    {% endif %}
+
 [gcode_macro PRIME_LINE]   
 gcode:
     # M="PRIME_LINE"
@@ -41,8 +84,6 @@ gcode:
     SET_PRESSURE_ADVANCE ADVANCE=0.0650
     {% elif MATERIAL == "ABS" %}
     SET_PRESSURE_ADVANCE ADVANCE=0.0460
-    #SET_PRESSURE_ADVANCE ADVANCE=0.0750
-    #NEVERMORE_ON
     {% else %}
        {% set TEXT ="No PA value for " + MATERIAL %}
     {% endif %}
