--- a/Macros/Mesh/Adaptive_Mesh.cfg
+++ b/Macros/Mesh/Adaptive_Mesh.cfg
@@ -94,6 +94,9 @@ gcode:
         {status_macro}              # Set status LEDs
     {% endif %}
 
+
+     DISPLAYTEXT TEXT="oooooooooo {x_min},{y_min}"
+
     _BED_MESH_CALIBRATE mesh_min={x_min},{y_min} mesh_max={x_max},{y_max} ALGORITHM={algorithm} PROBE_COUNT={points_x},{points_y} RELATIVE_REFERENCE_INDEX={ref_index}
 
     {% if probe_dock_enable == True %}
