--- a/Macros/printer_macros.cfg
+++ b/Macros/printer_macros.cfg
@@ -14,7 +14,7 @@ gcode:
     
     CLEAR_PAUSE
     SET_TEMP HEATER="bed" TEMP={BED} WAIT=0; set final bed temp
-    SET_TEMP HEATER="extruder" TEMP=150 WAIT=0; set hotend to 150 for heatsoak
+    #SET_TEMP HEATER="extruder" TEMP=150 WAIT=0; set hotend to 150 for heatsoak
     DISPLAYTEXT TEXT={TOOL}
     CHOME
     
