--- a/printer.cfg
+++ b/printer.cfg
@@ -44,6 +44,12 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 
 [include Hardware/Probe/Probe.cfg]
 
+
+#shaper_type_x: mzv
+#shaper_freq_x: 57.6
+#shaper_type_y: ei
+#shaper_freq_y: 49.2
+
 ################
 #### ERCF   ####
 ################
@@ -91,7 +97,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# max_x = 220.0
 #*#
 #*# [probe]
-#*# z_offset = -0.600
+#*# z_offset = -0.750
 #*#
 #*# [bed_mesh Freddo]
 #*# version = 1
@@ -115,11 +121,11 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.077813, 0.084063, 0.039063, 0.022188, 0.080938
-#*# 	  0.015625, 0.032813, 0.007813, -0.022500, 0.016563
-#*# 	  0.034375, 0.031563, -0.045937, 0.000000, -0.000938
-#*# 	  0.010312, 0.029687, 0.016250, -0.015000, 0.001875
-#*# 	  -0.030313, 0.005625, -0.045625, -0.050313, -0.025625
+#*# 	0.077813, 0.084063, 0.039063, 0.022188, 0.080938
+#*# 	0.015625, 0.032813, 0.007813, -0.022500, 0.016563
+#*# 	0.034375, 0.031563, -0.045937, 0.000000, -0.000938
+#*# 	0.010312, 0.029687, 0.016250, -0.015000, 0.001875
+#*# 	-0.030313, 0.005625, -0.045625, -0.050313, -0.025625
 #*# tension = 0.2
 #*# min_x = 40.0
 #*# algo = bicubic
@@ -134,11 +140,11 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# [bed_mesh hot3]
 #*# version = 1
 #*# points =
-#*# 	  0.077813, 0.084063, 0.039063, 0.022188, 0.080938
-#*# 	  0.015625, 0.032813, 0.007813, -0.022500, 0.016563
-#*# 	  0.034375, 0.031563, -0.045937, 0.000000, -0.000938
-#*# 	  0.010312, 0.029687, 0.016250, -0.015000, 0.001875
-#*# 	  -0.030313, 0.005625, -0.045625, -0.050313, -0.025625
+#*# 	0.077813, 0.084063, 0.039063, 0.022188, 0.080938
+#*# 	0.015625, 0.032813, 0.007813, -0.022500, 0.016563
+#*# 	0.034375, 0.031563, -0.045937, 0.000000, -0.000938
+#*# 	0.010312, 0.029687, 0.016250, -0.015000, 0.001875
+#*# 	-0.030313, 0.005625, -0.045625, -0.050313, -0.025625
 #*# tension = 0.2
 #*# min_x = 40.0
 #*# algo = bicubic
@@ -149,3 +155,9 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# max_y = 220.0
 #*# mesh_x_pps = 2
 #*# max_x = 220.0
+#*#
+#*# [input_shaper]
+#*# shaper_type_x = 2hump_ei
+#*# shaper_freq_x = 60.2
+#*# shaper_type_y = 3hump_ei
+#*# shaper_freq_y = 60.6
