--- a/Macros/Mesh/Adaptive_Mesh.cfg
+++ b/Macros/Mesh/Adaptive_Mesh.cfg
@@ -11,7 +11,7 @@ rename_existing: _BED_MESH_CALIBRATE
 
 ### This section allows control of status LEDs your printer may have.
 
-variable_led_enable: False              # Enables/disables the use of status LEDs in this macro.
+variable_led_enable: True              # Enables/disables the use of status LEDs in this macro.
 variable_status_macro: 'status_meshing' # If you have status LEDs in your printer (StealthBurner), you can use the macro that changes their status here.
 
 ### This section configures mesh point fuzzing, which allows probe points to be varied slightly if printing multiples of the same G-code file.
@@ -39,6 +39,7 @@ gcode:
     {% set x_max = all_points | map(attribute=0) | max | default(bed_mesh_max[0]) %}
     {% set y_max = all_points | map(attribute=1) | max | default(bed_mesh_max[1]) %}
     
+
     { action_respond_info("{} object points, clamping to bed mesh [{!r} {!r}]".format(
         all_points | count,
         bed_mesh_min,
