--- a/Macros/printer_macros.cfg
+++ b/Macros/printer_macros.cfg
@@ -24,18 +24,18 @@ gcode:
     _CZTILT
     #_CQGL
     ZHOME
-    SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=0 ;wait final extruder temp
+    #SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=0 ;wait final extruder temp
     #CLEAN_NOZZLE
     Nevermore_on
     #BED_MESH_PROFILE LOAD=Freddo
     BED_MESH_CLEAR
     BED_MESH_CALIBRATE
 
-    SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=0 ;wait final extruder temp
+    #SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=0 ;wait final extruder temp
     #CLEAN_NOZZLE
     RESET_EXTRUDER        
     SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
-
+    G28 Z
     
     PRIME_LINE
     STATUS_READY
@@ -55,7 +55,7 @@ gcode:
     {% set z_safe = [th.position.z + 2, th.axis_maximum.z]|min %}
     
     SAVE_GCODE_STATE NAME=STATE_PRINT_END
-    
+    M117
     CLEAR_BUFFER                           ; wait for buffer to clear
     RESET_EXTRUDER                         ; zero the extruder
     G1 E-25.0 F1800                 ; retract filament
@@ -67,7 +67,7 @@ gcode:
     SET_FAN                                
     
     BED_MESH_CLEAR
-    SET_TEMP HEATER="bed" TEMP=40 WAIT=1
+    SET_TEMP HEATER="bed" TEMP=55 WAIT=1
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
     
     CTRLFAN_OFF
