--- a/printer.cfg
+++ b/printer.cfg
@@ -29,6 +29,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 [include Macros/Calibration/calibration.cfg]
 [include Macros/Calibration/pa_calibrate.cfg]
 [include Macros/shelly.cfg]
+[include shaper/shaper.cfg]
 
 [include Macros/LEDS/case_leds.cfg]
 [include Macros/LEDS/sb_case_leds.cfg]
@@ -45,10 +46,6 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 [include Hardware/Probe/Probe.cfg]
 
 
-#shaper_type_x: mzv
-#shaper_freq_x: 57.6
-#shaper_type_y: ei
-#shaper_freq_y: 49.2
 
 ################
 #### ERCF   ####
@@ -97,7 +94,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# max_x = 220.0
 #*#
 #*# [probe]
-#*# z_offset = -0.750
+#*# z_offset = -1.440
 #*#
 #*# [bed_mesh Freddo]
 #*# version = 1
@@ -121,14 +118,14 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	0.077813, 0.084063, 0.039063, 0.022188, 0.080938
-#*# 	0.015625, 0.032813, 0.007813, -0.022500, 0.016563
-#*# 	0.034375, 0.031563, -0.045937, 0.000000, -0.000938
-#*# 	0.010312, 0.029687, 0.016250, -0.015000, 0.001875
-#*# 	-0.030313, 0.005625, -0.045625, -0.050313, -0.025625
+#*# 	  0.047813, -0.002812, -0.015312, -0.038437, -0.005625
+#*# 	  0.031875, 0.000000, -0.030312, -0.014062, 0.000000
+#*# 	  0.040313, 0.003438, 0.000000, -0.002813, 0.025625
+#*# 	  0.054687, 0.008750, -0.005625, -0.012188, 0.015625
+#*# 	  -0.036250, -0.012500, -0.054688, -0.057500, -0.026875
 #*# tension = 0.2
 #*# min_x = 40.0
-#*# algo = bicubic
+#*# algo = lagrange
 #*# y_count = 5
 #*# mesh_y_pps = 2
 #*# min_y = 40.0
@@ -157,7 +154,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# max_x = 220.0
 #*#
 #*# [input_shaper]
-#*# shaper_type_x = 2hump_ei
-#*# shaper_freq_x = 60.2
-#*# shaper_type_y = 3hump_ei
-#*# shaper_freq_y = 60.6
+#*# shaper_type_x = ei
+#*# shaper_freq_x = 48.0
+#*# shaper_type_y = zv
+#*# shaper_freq_y = 42.0
