--- a/Macros/LEDS/sb_case_leds.cfg
+++ b/Macros/LEDS/sb_case_leds.cfg
@@ -9,12 +9,12 @@
 #    STATUS_CALIBRATING_Z
 
 ### ESPERIMENTI INTEGRAZIONE SB LED
-[gcode_macro STATUS_HEATING]
-rename_existing: STATUS_HEATING_OLD
-gcode:
-    NEOPIXEL_PROGRESS LED=case_led INDEX=21 NUM=21 TEMPLATE="led_bed_temp_progress"       FGCOLOR1=0.5,0.0,0.0,0.0 BGCOLOR=0.0,0.0,0.0,0.5 # FGCOLOR2=0.2,0.2,0.0,0.0 FGCOLOR3=0.5,0.0,0.0,0.0
-    NEOPIXEL_PROGRESS LED=case_led INDEX=0  NUM=21  TEMPLATE="led_extruder_temp_progress" FGCOLOR1=0.5,0.0,0.0,0.0  BGCOLOR=0.0,0.0,0.0,0.5 # FGCOLOR2=0.2,0.2,0.0,0.0 FGCOLOR3=0.5,0.0,0.0,0.0
-    STATUS_HEATING_OLD
+# [gcode_macro STATUS_HEATING]
+# rename_existing: STATUS_HEATING_OLD
+# gcode:
+#     NEOPIXEL_PROGRESS LED=case_led INDEX=21 NUM=21 TEMPLATE="led_bed_temp_progress"       FGCOLOR1=0.5,0.0,0.0,0.0 BGCOLOR=0.0,0.0,0.0,0.5 # FGCOLOR2=0.2,0.2,0.0,0.0 FGCOLOR3=0.5,0.0,0.0,0.0
+#     NEOPIXEL_PROGRESS LED=case_led INDEX=0  NUM=21  TEMPLATE="led_extruder_temp_progress" FGCOLOR1=0.5,0.0,0.0,0.0  BGCOLOR=0.0,0.0,0.0,0.5 # FGCOLOR2=0.2,0.2,0.0,0.0 FGCOLOR3=0.5,0.0,0.0,0.0
+#     STATUS_HEATING_OLD
 
 [gcode_macro STATUS_PRINTING]
 rename_existing: STATUS_PRINTING_OLD
