--- a/Macros/mainsail.cfg
+++ b/Macros/mainsail.cfg
@@ -25,6 +25,10 @@ rename_existing: CANCEL_PRINT_BASE
 variable_park: True
 gcode:
   ## Move head and retract only if not already in the pause state and park set to true
+  CLEAR_BUFFER
+  RESET_EXTRUDER
+  G1 E-25.0 F1800 
+
   {% if printer.pause_resume.is_paused|lower == 'false' and park|lower == 'true'%}
     _TOOLHEAD_PARK_PAUSE_CANCEL
   {% endif %}
@@ -68,7 +72,7 @@ gcode:
   ##### set park positon for x and y #####
   # default is your max posion from your printer.cfg
   {% set x_park = printer.toolhead.axis_maximum.x|float / 2 %}
-  {% set y_park = 10 %}
+  {% set y_park = printer.toolhead.axis_maximum.y %}
   {% set z_park_delta = 2.0 %}
   ##### calculate save lift position #####
   {% set max_z = printer.toolhead.axis_maximum.z|float %}
