--- a/Macros/printer_macros.cfg
+++ b/Macros/printer_macros.cfg
@@ -16,7 +16,7 @@ gcode:
     SET_TEMP HEATER="bed" TEMP={BED} WAIT=0; set final bed temp
     #SET_TEMP HEATER="extruder" TEMP=150 WAIT=0; set hotend to 150 for heatsoak
     DISPLAYTEXT TEXT={TOOL}
-    CHOME
+    _CHOME
     
     
     SET_TEMP HEATER="bed" TEMP={BED} WAIT=1 ;wait final bed temp
@@ -27,9 +27,9 @@ gcode:
     #SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=0 ;wait final extruder temp
     #CLEAN_NOZZLE
     Nevermore_on
-    #BED_MESH_PROFILE LOAD=Freddo
-    BED_MESH_CLEAR
-    BED_MESH_CALIBRATE
+    BED_MESH_PROFILE LOAD=hot4
+    #BED_MESH_CLEAR
+    #BED_MESH_CALIBRATE
 
     #SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=0 ;wait final extruder temp
     #CLEAN_NOZZLE
@@ -37,7 +37,8 @@ gcode:
     SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
     G28 Z
     
-    PRIME_LINE
+    #PRIME_LINE
+    ADAPTIVE_PURGE
     STATUS_READY
     DISPLAYTEXT TEXT="Printing..."
     
