--- a/printer.cfg
+++ b/printer.cfg
@@ -20,6 +20,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 ################
 #### Macros ####
 ################
+[include Macros/arc.cfg]
 [include Macros/nozzle_scrub.cfg]
 [include Macros/printer_macros.cfg]
 [include Macros/base_macros.cfg]
@@ -94,7 +95,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# max_x = 220.0
 #*#
 #*# [probe]
-#*# z_offset = -1.440
+#*# z_offset = -0.750
 #*#
 #*# [bed_mesh Freddo]
 #*# version = 1
@@ -118,11 +119,11 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.047813, -0.002812, -0.015312, -0.038437, -0.005625
-#*# 	  0.031875, 0.000000, -0.030312, -0.014062, 0.000000
-#*# 	  0.040313, 0.003438, 0.000000, -0.002813, 0.025625
-#*# 	  0.054687, 0.008750, -0.005625, -0.012188, 0.015625
-#*# 	  -0.036250, -0.012500, -0.054688, -0.057500, -0.026875
+#*# 	0.063438, 0.069688, 0.085000, 0.044063, 0.047188
+#*# 	-0.018125, -0.001875, 0.000000, -0.008750, 0.039063
+#*# 	-0.010937, 0.010938, 0.000000, -0.016875, -0.022813
+#*# 	-0.039688, -0.009375, -0.024688, -0.023438, -0.038125
+#*# 	-0.057500, -0.021563, -0.037813, -0.065625, -0.019375
 #*# tension = 0.2
 #*# min_x = 40.0
 #*# algo = lagrange
@@ -154,7 +155,26 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# max_x = 220.0
 #*#
 #*# [input_shaper]
-#*# shaper_type_x = ei
-#*# shaper_freq_x = 48.0
+#*# shaper_type_x = 2hump_ei
+#*# shaper_freq_x = 91.6
 #*# shaper_type_y = zv
-#*# shaper_freq_y = 42.0
+#*# shaper_freq_y = 101.4
+#*#
+#*# [bed_mesh hot4]
+#*# version = 1
+#*# points =
+#*# 	0.063438, 0.069688, 0.085000, 0.044063, 0.047188
+#*# 	-0.018125, -0.001875, 0.000000, -0.008750, 0.039063
+#*# 	-0.010937, 0.010938, 0.000000, -0.016875, -0.022813
+#*# 	-0.039688, -0.009375, -0.024688, -0.023438, -0.038125
+#*# 	-0.057500, -0.021563, -0.037813, -0.065625, -0.019375
+#*# x_count = 5
+#*# y_count = 5
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = lagrange
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# max_x = 220.0
+#*# min_y = 40.0
+#*# max_y = 220.0
