--- a/Hardware/Axis/XY_Steppers.cfg
+++ b/Hardware/Axis/XY_Steppers.cfg
@@ -44,6 +44,7 @@ run_current: 0.9
 stealthchop_threshold: 0
 diag_pin: ^PG12
 driver_SGTHRS: 58   #questo valore dovete trovarlo partendo da 255 e scendendo fino a quando la home non funziona
+interpolate: False
 
 ##  A Stepper - Right
 ##  Connected to MOTOR_1
@@ -89,3 +90,4 @@ run_current: 0.9
 stealthchop_threshold: 0
 diag_pin: ^PG11
 driver_SGTHRS: 58   #questo valore dovete trovarlo partendo da 255 e scendendo fino a quando la home non funziona
+interpolate: False
