--- a/Hardware/Axis/Z_Steppers.cfg
+++ b/Hardware/Axis/Z_Steppers.cfg
@@ -35,7 +35,7 @@ interpolate: False
 run_current: 0.6
 sense_resistor: 0.110
 stealthchop_threshold: 0
-
+interpolate: False
 ##  Z1 Stepper - Rear Center
 ##  Connected to MOTOR_3
 
@@ -56,7 +56,7 @@ interpolate: False
 run_current: 0.6
 sense_resistor: 0.110
 stealthchop_threshold: 0
-
+interpolate: False
 
 ##  Z2 Stepper - Front Right
 ##  Connected to MOTOR_4
@@ -75,3 +75,4 @@ interpolate: False
 run_current: 0.6
 sense_resistor: 0.110
 stealthchop_threshold: 0
+interpolate: False
