--- a/Hardware/Axis/E_Stepper.cfg
+++ b/Hardware/Axis/E_Stepper.cfg
@@ -28,3 +28,4 @@ rotation_distance = 5.7                                            # See calibra
 run_current: 0.5
 sense_resistor: 0.110
 stealthchop_threshold: 0
+interpolate: False
