--- a/Hardware/toolboard.cfg
+++ b/Hardware/toolboard.cfg
@@ -1,36 +1,78 @@
-[mcu EBBCan]
-canbus_uuid: 3d60339a57c8
+## SB2040设置
+[mcu sb2040]
+canbus_uuid:  cafc1bc4fa05
 
 [extruder]
-heater_pin: EBBCan: PB1
-sensor_pin: EBBCan: PA0
-step_pin: EBBCan: PA9
-dir_pin: EBBCan: PA8
-enable_pin: !EBBCan: PA10
+step_pin: sb2040:gpio9
+dir_pin: sb2040:gpio10
+enable_pin: !sb2040:gpio7
+
+heater_pin: sb2040:gpio6
+sensor_pin: sb2040:gpio27
 
 [tmc2209 extruder]
-uart_pin: EBBCan: PA13
+uart_pin: sb2040:gpio8
+run_current: 0.600
+stealthchop_threshold: 999999
 
 [probe]
-pin: EBBCan: PC13
+pin: sb2040:gpio28
 
+
+
+
+## FAN0
 [fan]
-pin: EBBCan: PA2
+pin: sb2040:gpio13
 
+## FAN1
+#[fan_generic fan]
 [heater_fan hotend_fan]
-pin: EBBCan: PA1
+pin: sb2040:gpio14
+
+## FAN2
+# [fan_generic fan]
+# pin: sb2040:gpio15
+
+## X限位设置
+
+## SB2040板有gpio25, gpio28, gpio29三个限位引脚可用，gpio25支持高压输入。按照实际接线修改配置
+
+## 挤出机
 
 
+## sensor_type: PT1000
+## pullup_resistor: 1000
+## SB2040默认热敏上拉电阻为4700。可通过跳线帽配置为1000，1000更适合PT1000类型的温度传感器
+
+
+## 挤出机驱动设置
+
+
+
+## RGB
 [neopixel sb_leds]
-pin: EBBCan:PA3
+pin: sb2040:gpio12
 
+
+## ADXL345加速度计
 [adxl345]
-cs_pin: EBBCan: PB12
+cs_pin: sb2040:gpio1
+spi_software_sclk_pin: sb2040:gpio0
+spi_software_mosi_pin: sb2040:gpio3
+spi_software_miso_pin: sb2040:gpio2
 
-#####################################################################
-#   EBB 42 MCU Thermistor
-#####################################################################
 
-[temperature_sensor Toolboard_mcu]
+
+
+## SB2040温度
+[temperature_sensor FLY-SB2040]
 sensor_type: temperature_mcu
-sensor_mcu: EBBCan
+sensor_mcu: sb2040
+
+## SB2040板载NTC100K温度
+[temperature_sensor Warehouse]
+sensor_type = ATC Semitec 104GT-2
+sensor_pin = sb2040:gpio26
+min_temp: -50
+max_temp: 350
