--- a/printer.cfg
+++ b/printer.cfg
@@ -95,7 +95,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# max_x = 220.0
 #*#
 #*# [probe]
-#*# z_offset = -0.8
+#*# z_offset = -0.9
 #*#
 #*# [bed_mesh Freddo]
 #*# version = 1
@@ -155,10 +155,10 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# max_x = 220.0
 #*#
 #*# [input_shaper]
-#*# shaper_type_x = 2hump_ei
-#*# shaper_freq_x = 91.6
-#*# shaper_type_y = zv
-#*# shaper_freq_y = 101.4
+#*# shaper_type_x = 3hump_ei
+#*# shaper_freq_x = 74.4
+#*# shaper_type_y = mzv
+#*# shaper_freq_y = 25.6
 #*#
 #*# [bed_mesh hot4]
 #*# version = 1
