--- a/printer.cfg
+++ b/printer.cfg
@@ -47,6 +47,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 [include Hardware/Probe/Probe.cfg]
 
 
+[include start.cfg]
 
 ################
 #### ERCF   ####
