--- a/start.cfg
+++ b/start.cfg
@@ -1,28 +1,34 @@
 #Genereted with https://config.gab-3d.com/
 #
-# https://config.gab-3d.com/share/a72e95ee-9034-4218-bdd4-83d22697511c
+# https://config.gab-3d.com/share/d04ec550-bcb0-4d00-b854-27ee0996a142
 
 [gcode_macro PRINT_START]
 gcode:
   {% set BED = params.BED_TEMP|int %}
   {% set EXTRUDER = params.EXTRUDER_TEMP|int %}
+  _CHOME  ;Home all axes fi not already homed
+  _CQGL  ;Quad Gantry Level if not already done
+  G0 Z30  ;Move Up
+  PARK_CENTER_REAR  ;Park central rear
+  Nevermore_on  ;Turn on Nevermore
   M190 S{BED}  ;Set bed temperature and wait
-  _CHOME  ;Home all axes if not homed
-  _WAIT TIME=180  ;Wait x seconds
-  _CQGL  ;Quad Gantry Level if not done
   BED_MESH_CLEAR  ;Clear Bed Mesh
   BED_MESH_CALIBRATE  ;Adaptive Mesh [Auto]
-  Nevermore_on  ;Turn on Nevermore
   M109 S{EXTRUDER}  ;Set extruder temperature and wait
+  G28 Z  ;Home Z axis
   _ADAPTIVE_PURGE  ;Adaptive Purge
 
 [gcode_macro PRINT_END]
 gcode:
+  M400  ;Clear buffer
+  G90  ;Set to absolute positioning
   _MOVE_AWAY  ;Move away from print
-  G1 E-25 F1800  ;Retract filament
-  PARK_CENTER_REAR  ;Park central rear
+  G92 E0   ;Reset extruder
+  G1 F-25 F1800  ;Retract filament
   TURN_OFF_HEATERS  ;Turn off heaters
+  PARK_CENTER_REAR  ;Park central rear
   M84  ;Disable motors
+  M190 S55  ;Set bed temperature and wait
 
 [gcode_macro _CHOME]
 gcode:
@@ -31,10 +37,6 @@ gcode:
   G28
   {% endif %}
   
-[gcode_macro _WAIT]
-gcode:
-    {% set TIME = params.TIME|default(0)|int %}
-    G4 P{TIME*1000}
 
 [gcode_macro _CQGL]
 gcode:
@@ -45,6 +47,27 @@ gcode:
       QUAD_GANTRY_LEVEL
       G28 Z
   {% endif %}
+
+[gcode_macro PARK_CENTER_REAR]
+gcode:
+    {% set th = printer.toolhead %}
+    {% set x_safe = th.position.x + 20 * (1 if th.axis_maximum.x - th.position.x > 20 else -1) %}
+    {% set y_safe = th.position.y + 20 * (1 if th.axis_maximum.y - th.position.y > 20 else -1) %}
+
+    G0 X{th.axis_maximum.x//2} Y{th.axis_maximum.y - 2} F3600  
+
+
+##############################
+######### NEVERMORE ##########
+##############################
+[gcode_macro Nevermore_on]
+gcode:
+  SET_FAN_SPEED FAN=***FAN*** SPEED=1
+
+[gcode_macro Nevermore_off]
+gcode:
+  SET_FAN_SPEED FAN=***FAN*** SPEED=0
+
 
 [gcode_macro BED_MESH_CALIBRATE]
 rename_existing: _BED_MESH_CALIBRATE
@@ -64,12 +87,12 @@ gcode:
     {% set x_max = all_points | map(attribute=0) | max | default(bed_mesh_max[0]) %}
     {% set y_max = all_points | map(attribute=1) | max | default(bed_mesh_max[1]) %}
     
-    
+    BED_MESH_CALIBRATE Load=default    
     {% if printer["bed_mesh"].profile_name == '' %}
         { action_respond_info("No existing bed mesh found.") }
         {% set last_area_end_x=-1 %}
     {% endif %}
-
+ 
     {% if printer.toolhead.homed_axes != "xyz" %}
         G28
     {% endif %}
@@ -86,8 +109,10 @@ gcode:
   {% set print_min_y = y_min %}
   {% set print_max_x = x_max %}
   {% set print_max_y = y_max %}
-    
-    {% set mesh_min_x = bed_mesh_min.split(",")[0]|float %}
+  
+
+
+  {% set mesh_min_x = bed_mesh_min.split(",")[0]|float %}
   {% set mesh_min_y = bed_mesh_min.split(",")[1]|float %}
   {% set mesh_max_x = bed_mesh_max.split(",")[0]|float %}
   {% set mesh_max_y = bed_mesh_max.split(",")[1]|float %}
@@ -105,6 +130,7 @@ gcode:
     {% elif euclid_available %}
         DEPLOY_PROBE
     {% endif %}
+
     {% if (print_min_x < print_max_x) and (print_min_y < print_max_y) %}
 
         {% set minimum_probe_count = 3 %}
@@ -269,25 +295,4 @@ gcode:
       
     G90                                      ; absolute positioning
     G0 X{x_safe} Y{y_safe} Z{z_safe} F20000  ; move nozzle to remove stringing
-
-
-[gcode_macro PARK_CENTER_REAR]
-gcode:
-    {% set th = printer.toolhead %}
-    {% set x_safe = th.position.x + 20 * (1 if th.axis_maximum.x - th.position.x > 20 else -1) %}
-    {% set y_safe = th.position.y + 20 * (1 if th.axis_maximum.y - th.position.y > 20 else -1) %}
-
-    G0 X{th.axis_maximum.x//2} Y{th.axis_maximum.y - 2} F3600  
-
-
-##############################
-######### NEVERMORE ##########
-##############################
-[gcode_macro Nevermore_on]
-gcode:
-  SET_FAN_SPEED FAN=nevermore SPEED=1
-
-[gcode_macro Nevermore_off]
-gcode:
-  SET_FAN_SPEED FAN=nevermore SPEED=0
 
