--- a/printer.cfg
+++ b/printer.cfg
@@ -47,7 +47,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 [include Hardware/Probe/Probe.cfg]
 
 
-[include start.cfg]
+#[include start.cfg]
 
 ################
 #### ERCF   ####
@@ -96,7 +96,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# max_x = 220.0
 #*#
 #*# [probe]
-#*# z_offset = -0.9
+#*# z_offset = -1.050
 #*#
 #*# [bed_mesh Freddo]
 #*# version = 1
