--- a/Hardware/Probe/Probe.cfg
+++ b/Hardware/Probe/Probe.cfg
@@ -43,9 +43,9 @@ z_positions:
     125, 298
     300, 18
 points:
-    30, 30
-    125, 195
-    220, 30
+    15, 15
+    125, 235
+    235, 15
 
 ## Uncomment below for 300mm build
 #z_positions:
@@ -81,7 +81,7 @@ retry_tolerance: 0.0075
 speed: 100
 horizontal_move_z: 10
 mesh_min: 40, 40
-mesh_max: 220,220
+mesh_max: 220, 220
 fade_start: 0.6
 fade_end: 10.0
 probe_count: 5,5
