--- a/Hardware/sb_leds.cfg
+++ b/Hardware/sb_leds.cfg
@@ -176,6 +176,7 @@ gcode:
     {% set transmit=params.TRANSMIT|default(1) %}
 
     _set_sb_leds led={led} red={red} green={green} blue={blue} white={white} idx="{idx}" transmit={transmit}
+    SET_LED LED=case_led GREEN={green} RED={red} BLUE={blue} WHITE={white}
 
 [gcode_macro _set_nozzle_leds]
 gcode:
