--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -1,3 +1,8 @@
+[preheat my_temp_setting]
+extruder: 250
+heater_bed: 0
+
+
 [menu __main homing]
 name: Homing
 icon: home
@@ -13,6 +18,51 @@ method: printer.gcode.script
 params: {"script":"SHUTDOWN"}
 
 
+
+[menu __main tr]
+name: {{ gettext('TR') }}
+icon: home
+
+[menu __main tr tr_home]
+name: Trad Home
+icon: shutdown
+method: printer.gcode.script
+params: {"script":"tr_home"}
+
+[menu __main tr Unload]
+name: Unload
+icon: shutdown
+method: printer.gcode.script
+params: {"script":"TR_UNLOAD_TOOLHEAD"}
+
+[menu __main tr load_0]
+name: Load 0
+icon: shutdown
+method: printer.gcode.script
+params: {"script":"TR_LOAD_LANE LANE=0"}
+
+
+[menu __main tr load_1]
+name: Load 1
+icon: shutdown
+method: printer.gcode.script
+params: {"script":"TR_LOAD_LANE LANE=1"}
+
+
+
+
+[menu __main tr head_0]
+name: Load Head 0
+icon: shutdown
+method: printer.gcode.script
+params: {"script":"T0"}
+
+
+[menu __main tr head_1]
+name: Load Head 1
+icon: shutdown
+method: printer.gcode.script
+params: {"script":"T1"}
 
 #~# --- Do not edit below this line. This section is auto generated --- #~#
 #~#
