--- a/Macros/printer_macros.cfg
+++ b/Macros/printer_macros.cfg
@@ -8,7 +8,7 @@ gcode:
     # Parameters
     {% set BED = params.BED_TEMP|int %}
     {% set EXTRUDER = params.EXTRUDER_TEMP|int %}
-    {% set MATERIAL = params.MATERIAL|default("XXX")|string %}
+    
     {% set TOOL = params.TOOL|default(-90)|int %}
     
     CLEAR_PAUSE
@@ -19,25 +19,27 @@ gcode:
     
     
     SET_TEMP HEATER="bed" TEMP={BED} WAIT=1 ;wait final bed temp
-    MATERIAL_PA MATERIAL={MATERIAL}
+    #MATERIAL_PA MATERIAL={MATERIAL}
     _CZTILT
     #_CQGL
-    ZHOME
+    #ZHOME
     #SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=0 ;wait final extruder temp
     #CLEAN_NOZZLE
     Nevermore_on
-    BED_MESH_PROFILE LOAD=hot4
+    #BED_MESH_PROFILE LOAD=hot5
     #BED_MESH_CLEAR
-    #BED_MESH_CALIBRATE
+    BED_MESH_CALIBRATE
 
     #SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=0 ;wait final extruder temp
     #CLEAN_NOZZLE
     RESET_EXTRUDER        
+    tr_home
     SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
     G28 Z
     
     #PRIME_LINE
-    ADAPTIVE_PURGE
+    #ADAPTIVE_PURGE
+    #VORON_PURGE
     STATUS_READY
     DISPLAYTEXT TEXT="Printing..."
     
@@ -67,7 +69,7 @@ gcode:
     SET_FAN                                
     
     BED_MESH_CLEAR
-    SET_TEMP HEATER="bed" TEMP=55 WAIT=1
+    #SET_TEMP HEATER="bed" TEMP=55 WAIT=1
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
     
     CTRLFAN_OFF
