--- a/Macros/shelly.cfg
+++ b/Macros/shelly.cfg
@@ -5,11 +5,38 @@ verbose: True
 
 [gcode_macro SHUTDOWN]
 gcode:
-    RUN_SHELL_COMMAND CMD=TURN_OFF_SHELLY
-    RUN_SHELL_COMMAND CMD=TURN_OFF_SHELLY
-    UPDATE_DELAYED_GCODE ID=SHUTDOWNRPI DURATION=8
+    {% set ashutdown = printer["gcode_macro AUTOSHUTDOWN"].attivato %}
 
+    {% if ashutdown %}
+        RUN_SHELL_COMMAND CMD=TURN_OFF_SHELLY
+        RUN_SHELL_COMMAND CMD=TURN_OFF_SHELLY
+        UPDATE_DELAYED_GCODE ID=SHUTDOWNRPI DURATION=8
+    {% endif %}
 
 [delayed_gcode SHUTDOWNRPI]
 gcode:
     {action_call_remote_method("shutdown_machine")}
+
+[gcode_macro SPEGNI_A_FINE]
+gcode:
+  SET_GCODE_VARIABLE MACRO=AUTOSHUTDOWN VARIABLE=attivato VALUE=True
+
+[gcode_macro NON_SPEGNI_A_FINE]
+gcode:
+  SET_GCODE_VARIABLE MACRO=AUTOSHUTDOWN VARIABLE=attivato VALUE=False
+
+[gcode_macro STATO_SPEGNI_A_FINE]
+gcode:
+  {% set ashutdown = printer["gcode_macro AUTOSHUTDOWN"].attivato %}
+    
+    {% if ashutdown %}
+        DISPLAYTEXT TEXT="Si spegnera' a fine stampa"
+    {% else %}
+        DISPLAYTEXT TEXT="NON si spegnera' a fine stampa"
+    {% endif %}
+
+
+
+[gcode_macro AUTOSHUTDOWN]
+variable_attivato: True
+gcode:
