--- a/Hardware/Axis/E_Stepper.cfg
+++ b/Hardware/Axis/E_Stepper.cfg
@@ -6,8 +6,6 @@
 [extruder]
 nozzle_diameter: 0.400
 filament_diameter: 1.75
-min_temp: 0
-max_temp: 270
 control: pid
 pid_Kp: 21.503
 pid_Ki: 1.419
@@ -22,7 +20,7 @@ sensor_type: ATC Semitec 104NT-4-R025H42G
 microsteps: 32
 full_steps_per_rotation: 200                                       # Set to 200 for LDO 1.8° stepper motor, and set to 400 for OMC(StepperOnline) 0.9° stepper motor
 rotation_distance = 5.7                                            # See calibrating rotation_distance on extruders doc
-
+min_extrude_temp: 10
 
 [tmc2209 extruder]
 run_current: 0.5
