--- a/moonraker.conf
+++ b/moonraker.conf
@@ -60,3 +60,24 @@ env: ~/.KlipperScreen-env/bin/python
 requirements: scripts/KlipperScreen-requirements.txt
 install_script: scripts/KlipperScreen-install.sh
 managed_services: KlipperScreen
+
+
+[update_manager Klipper-Adaptive-Meshing-Purging]
+type: git_repo
+channel: dev
+path: ~/Klipper-Adaptive-Meshing-Purging
+origin: https://github.com/kyleisah/Klipper-Adaptive-Meshing-Purging.git
+managed_services: klipper
+primary_branch: main
+
+[update_manager Gab3d-Klipper-Utilities]
+type: git_repo
+channel: dev
+primary_branch: main
+path: ~/Gab3d-Klipper-Utilities
+managed_services:
+    klipper
+    moonraker
+origin: https://github.com/gab-3d/Gab3d-Klipper-Utilities.git
+install_script: install.sh
+    
