--- a/printer.cfg
+++ b/printer.cfg
@@ -1,3 +1,5 @@
+[include shell_command.cfg]
+[include gab-3d-utilities.cfg]
 [mcu]
 ##  this is fixwd should not be changed for big dipper
 serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
@@ -32,13 +34,17 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 [include Macros/shelly.cfg]
 [include shaper/shaper.cfg]
 
-[include Macros/LEDS/case_leds.cfg]
-[include Macros/LEDS/sb_case_leds.cfg]
+#[include Macros/LEDS/case_leds.cfg]
+#[include Macros/LEDS/sb_case_leds.cfg]
 [include Macros/LEDS/sb_leds_macros.cfg]
 [include Macros/mainsail.cfg]
 
-[include Macros/Mesh/Adaptive_Mesh.cfg]
-[include Macros/Mesh/Adaptive_Purge.cfg]
+# [include Macros/Mesh/Adaptive_Mesh.cfg]
+# [include Macros/Mesh/Adaptive_Purge.cfg]
+
+[include KAMP/Adaptive_Mesh.cfg]
+[include KAMP/Voron_Purge.cfg]
+[include KAMP/Line_Purge.cfg]
 
 ################
 #### Probe ####
@@ -46,8 +52,22 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 
 [include Hardware/Probe/Probe.cfg]
 
+###################
+#### Trad Rack ####
+###################
+[include Hardware/rack_skr.cfg]
+[include Macros/trad_rack_optional.cfg]
 
+[include live.cfg]
 #[include start.cfg]
+
+[gcode_macro _DIAG_PWD]
+gcode:
+    RUN_SHELL_COMMAND CMD=GABTESTPWD
+[gcode_shell_command GABTESTPWD]
+command: pwd		 
+timeout: 60.
+verbose: True
 
 ################
 #### ERCF   ####
@@ -96,7 +116,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# max_x = 220.0
 #*#
 #*# [probe]
-#*# z_offset = -1.050
+#*# z_offset = -0.450
 #*#
 #*# [bed_mesh Freddo]
 #*# version = 1
@@ -120,21 +140,19 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	0.063438, 0.069688, 0.085000, 0.044063, 0.047188
-#*# 	-0.018125, -0.001875, 0.000000, -0.008750, 0.039063
-#*# 	-0.010937, 0.010938, 0.000000, -0.016875, -0.022813
-#*# 	-0.039688, -0.009375, -0.024688, -0.023438, -0.038125
-#*# 	-0.057500, -0.021563, -0.037813, -0.065625, -0.019375
+#*# 	  0.019688, 0.023750, -0.016250
+#*# 	  0.027500, 0.000000, -0.010625
+#*# 	  0.019375, -0.003750, -0.013125
 #*# tension = 0.2
-#*# min_x = 40.0
+#*# min_x = 93.63
 #*# algo = lagrange
-#*# y_count = 5
+#*# y_count = 3
 #*# mesh_y_pps = 2
-#*# min_y = 40.0
-#*# x_count = 5
-#*# max_y = 220.0
+#*# min_y = 92.72
+#*# x_count = 3
+#*# max_y = 117.5
 #*# mesh_x_pps = 2
-#*# max_x = 220.0
+#*# max_x = 151.21
 #*#
 #*# [bed_mesh hot3]
 #*# version = 1
@@ -156,10 +174,10 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# max_x = 220.0
 #*#
 #*# [input_shaper]
-#*# shaper_type_x = 3hump_ei
-#*# shaper_freq_x = 74.4
+#*# shaper_type_x = mzv
+#*# shaper_freq_x = 58.8
 #*# shaper_type_y = mzv
-#*# shaper_freq_y = 25.6
+#*# shaper_freq_y = 45.0
 #*#
 #*# [bed_mesh hot4]
 #*# version = 1
@@ -179,3 +197,21 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# max_x = 220.0
 #*# min_y = 40.0
 #*# max_y = 220.0
+#*#
+#*# [bed_mesh hot5]
+#*# version = 1
+#*# points =
+#*# 	-0.051875, -0.047500, -0.058125, -0.065000
+#*# 	-0.021875, -0.039062, -0.085937, -0.086562
+#*# 	0.000000, -0.030000, -0.044688, -0.077500
+#*# 	0.019375, -0.015000, -0.037500, -0.062813
+#*# x_count = 4
+#*# y_count = 4
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = lagrange
+#*# tension = 0.2
+#*# min_x = 65.21
+#*# max_x = 184.79
+#*# min_y = 65.21
+#*# max_y = 184.79
