--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -51,18 +51,18 @@ params: {"script":"TR_LOAD_LANE LANE=1"}
 
 
 
-[menu __main tr head_0]
-name: Load Head 0
-icon: shutdown
-method: printer.gcode.script
-params: {"script":"T0"}
+# [menu __main tr head_0]
+# name: Load Head 0
+# icon: shutdown
+# method: printer.gcode.script
+# params: {"script":"T0"}
 
 
-[menu __main tr head_1]
-name: Load Head 1
-icon: shutdown
-method: printer.gcode.script
-params: {"script":"T1"}
+# [menu __main tr head_1]
+# name: Load Head 1
+# icon: shutdown
+# method: printer.gcode.script
+# params: {"script":"T1"}
 
 #~# --- Do not edit below this line. This section is auto generated --- #~#
 #~#
@@ -72,4 +72,5 @@ params: {"script":"T1"}
 #~# [graph Printer]
 #~# temperature_sensor chamber = False
 #~# heater_bed = False
+#~# extruder = False
 #~#
