--- a/Macros/printer_macros.cfg
+++ b/Macros/printer_macros.cfg
@@ -32,14 +32,15 @@ gcode:
 
     #SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=0 ;wait final extruder temp
     #CLEAN_NOZZLE
-    RESET_EXTRUDER        
-    tr_home
+    RESET_EXTRUDER  
+
+    #tr_home
     SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
     G28 Z
     
     #PRIME_LINE
     #ADAPTIVE_PURGE
-    #VORON_PURGE
+    VORON_PURGE
     STATUS_READY
     DISPLAYTEXT TEXT="Printing..."
     
