--- a/printer.cfg
+++ b/printer.cfg
@@ -55,8 +55,8 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 ###################
 #### Trad Rack ####
 ###################
-[include Hardware/rack_skr.cfg]
-[include Macros/trad_rack_optional.cfg]
+#[include Hardware/rack_skr.cfg]
+#[include Macros/trad_rack_optional.cfg]
 
 [include live.cfg]
 #[include start.cfg]
