--- a/printer.cfg
+++ b/printer.cfg
@@ -2,7 +2,7 @@
 [include gab-3d-utilities.cfg]
 [mcu]
 ##  this is fixwd should not be changed for big dipper
-serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
+serial: /dev/serial/by-path/platform-fd500000.pcie-pci-0000:01:00.0-usb-0:1.4:1.0
 
 [exclude_object]
 
@@ -58,7 +58,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #[include Hardware/rack_skr.cfg]
 #[include Macros/trad_rack_optional.cfg]
 
-[include live.cfg]
+#[include live.cfg]
 #[include start.cfg]
 
 [gcode_macro _DIAG_PWD]
@@ -116,7 +116,7 @@ verbose: True
 #*# max_x = 220.0
 #*#
 #*# [probe]
-#*# z_offset = -0.450
+#*# z_offset = -0.500
 #*#
 #*# [bed_mesh Freddo]
 #*# version = 1
@@ -140,9 +140,9 @@ verbose: True
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.019688, 0.023750, -0.016250
-#*# 	  0.027500, 0.000000, -0.010625
-#*# 	  0.019375, -0.003750, -0.013125
+#*# 	0.019688, 0.023750, -0.016250
+#*# 	0.027500, 0.000000, -0.010625
+#*# 	0.019375, -0.003750, -0.013125
 #*# tension = 0.2
 #*# min_x = 93.63
 #*# algo = lagrange
