--- a/Hardware/rack_skr.cfg
+++ b/Hardware/rack_skr.cfg
@@ -1,5 +1,5 @@
 [mcu ercf]
-serial: /dev/serial/by-path/platform-fd500000.pcie-pci-0000:01:00.0-usb-0:1.1:1.0
+serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_39FFD6054247333126572257-if00
 
 
 [trad_rack]
