--- a/Macros/printer_macros.cfg
+++ b/Macros/printer_macros.cfg
@@ -34,10 +34,10 @@ gcode:
     #CLEAN_NOZZLE
     RESET_EXTRUDER  
 
-    #tr_home
+    tr_home
     SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
     G28 Z
-    
+    T0
     #PRIME_LINE
     #ADAPTIVE_PURGE
     VORON_PURGE
