--- a/printer.cfg
+++ b/printer.cfg
@@ -1,5 +1,6 @@
 [include shell_command.cfg]
 [include gab-3d-utilities.cfg]
+
 [mcu]
 ##  this is fixwd should not be changed for big dipper
 serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
@@ -55,10 +56,10 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 ###################
 #### Trad Rack ####
 ###################
-#[include Hardware/rack_skr.cfg]
-#[include Macros/trad_rack_optional.cfg]
+[include Hardware/rack_skr.cfg]
+[include Macros/trad_rack_optional.cfg]
 
-#[include live.cfg]
+
 #[include start.cfg]
 
 [gcode_macro _DIAG_PWD]
@@ -69,6 +70,8 @@ command: pwd
 timeout: 60.
 verbose: True
 
+
+#[include giano.cfg]
 ################
 #### ERCF   ####
 ################
