--- a/Hardware/trad_rack.cfg
+++ b/Hardware/trad_rack.cfg
@@ -1,3 +1,7 @@
+####
+# SKR E3 V2
+####
+
 [mcu ercf]
 serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_39FFD6054247333126572257-if00
 
@@ -12,7 +16,7 @@ servo_down_angle: 0.0
 servo_up_angle: 180.0
 selector_unload_length: 17.5
 bowden_length: 990.0
-extruder_load_length: 61.0
+extruder_load_length: 55.0
 hotend_load_length: 15.0
 #toolhead_unload_length: 61.0
 bowden_unload_length_mod: -30.0
