--- a/printer.cfg
+++ b/printer.cfg
@@ -10,72 +10,48 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 ##################
 #### Hardware ####
 ##################
-[include Hardware/hardware.cfg]
-[include Hardware/leds.cfg]
-[include Hardware/kinematics.cfg]
-[include Hardware/Axis/Z_Steppers.cfg]
-[include Hardware/Axis/XY_Steppers.cfg]
-[include Hardware/Axis/E_Stepper.cfg]
-[include Hardware/sb_leds.cfg]
-[include Hardware/sensorless.cfg]
+[include Hardware/octopus.cfg]
 [include Hardware/toolboard.cfg]
+[include Hardware/kinematics.cfg]
+[include Hardware/Probe.cfg]
+[include Hardware/sb_leds.cfg]
+
 
 ################
 #### Macros ####
 ################
 [include Macros/arc.cfg]
 [include Macros/nozzle_scrub.cfg]
-[include Macros/printer_macros.cfg]
+#[include Macros/printer_macros.cfg]
 [include Macros/base_macros.cfg]
 [include Macros/parking.cfg]
 
-[include Macros/Helpers/filament_swap.cfg]
-[include Macros/Calibration/calibration.cfg]
-[include Macros/Calibration/pa_calibrate.cfg]
+
+
+[include Macros/pa_calibrate.cfg]
 [include Macros/shelly.cfg]
-[include shaper/shaper.cfg]
+
 
 #[include Macros/LEDS/case_leds.cfg]
 #[include Macros/LEDS/sb_case_leds.cfg]
-[include Macros/LEDS/sb_leds_macros.cfg]
+[include Macros/sb_leds_macros.cfg]
 [include Macros/mainsail.cfg]
+[include Macros/sensorless.cfg]
 
-# [include Macros/Mesh/Adaptive_Mesh.cfg]
-# [include Macros/Mesh/Adaptive_Purge.cfg]
-
-[include KAMP/Adaptive_Mesh.cfg]
-[include KAMP/Voron_Purge.cfg]
-[include KAMP/Line_Purge.cfg]
-
-################
-#### Probe ####
-################
-
-[include Hardware/Probe/Probe.cfg]
 
 ###################
 #### Trad Rack ####
 ###################
-#[include Hardware/rack_skr.cfg]
-#[include Macros/trad_rack_optional.cfg]
+[include Hardware/trad_rack.cfg]
+[include Macros/trad_rack_optional.cfg]
 
 
-#[include start.cfg]
+[include Macros/start.cfg]
 
-[gcode_macro _DIAG_PWD]
-gcode:
-    RUN_SHELL_COMMAND CMD=GABTESTPWD
-[gcode_shell_command GABTESTPWD]
-command: pwd		 
-timeout: 60.
-verbose: True
+
 
 
 #[include giano.cfg]
-################
-#### ERCF   ####
-################
-#[include ERCF/ercf.cfg]
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
@@ -119,7 +95,7 @@ verbose: True
 #*# max_x = 220.0
 #*#
 #*# [probe]
-#*# z_offset = -0.500
+#*# z_offset = -0.650
 #*#
 #*# [bed_mesh Freddo]
 #*# version = 1
@@ -143,19 +119,19 @@ verbose: True
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	0.019688, 0.023750, -0.016250
-#*# 	0.027500, 0.000000, -0.010625
-#*# 	0.019375, -0.003750, -0.013125
+#*# 	  -0.012812, -0.029687, -0.041250
+#*# 	  -0.005313, 0.000000, -0.041250
+#*# 	  -0.009063, -0.050625, -0.033438
 #*# tension = 0.2
-#*# min_x = 93.63
+#*# min_x = 77.71
 #*# algo = lagrange
 #*# y_count = 3
 #*# mesh_y_pps = 2
-#*# min_y = 92.72
+#*# min_y = 110.7
 #*# x_count = 3
-#*# max_y = 117.5
+#*# max_y = 139.28
 #*# mesh_x_pps = 2
-#*# max_x = 151.21
+#*# max_x = 139.29
 #*#
 #*# [bed_mesh hot3]
 #*# version = 1
