--- a/Hardware/kinematics.cfg
+++ b/Hardware/kinematics.cfg
@@ -22,3 +22,18 @@ default_type: echo
 #   override the "default_type".
 
 [exclude_object]
+
+
+[adxl345]
+axes_map: z,y,x
+
+
+
+[resonance_tester]
+accel_chip: adxl345
+probe_points:
+    125, 125, 20  # an example
+
+
+
+[input_shaper]
