--- a/Macros/start.cfg
+++ b/Macros/start.cfg
@@ -1,30 +1,56 @@
+#Genereted with https://config.gab-3d.com/
+#
+# https://config.gab-3d.com/share/fa65991e-8006-4aec-9905-a34599ea87ca
 
 [gcode_macro PRINT_END]
 gcode:
+  {% set TOOL = params.TOOL|default(-90)|int %}
   M400  ;Clear buffer
   G90  ;Set to absolute positioning
   _MOVE_AWAY  ;Move away from print
-  G92 E0   ;Reset extruder
-  G1 F-25 F1800  ;Retract filament
+
+  {% if TOOL > -1 and printer["trad_rack"] != null %}
+    TR_UNLOAD_TOOLHEAD
+  {% else %}
+    G92 E0   ;Reset extruder
+    G1 F-25 F1800  ;Retract filament
+  {% endif %}
   TURN_OFF_HEATERS  ;Turn off heaters
   PARK_CENTER_REAR  ;Park central rear
+  M109 S45  ;Set extruder temperature and wait
   M84  ;Disable motors
+  SHUTDOWN
+
+
+[gcode_macro _ATEST_MACRO]
+gcode:
+  {%if printer["trad_rack"] != null %}
+  M118 ok
+  {% endif %}
+
 
 [gcode_macro PRINT_START]
 gcode:
   {% set BED = params.BED_TEMP|int %}
   {% set EXTRUDER = params.EXTRUDER_TEMP|int %}
+  {% set TOOL = params.TOOL|default(-90)|int %}
+
   _CHOME  ;Home all axes fi not already homed
   _CZTILT  ;Z Tilt if not done
   G0 Z30  ;Move Up
-  PARK_CENTER_REAR  ;Park central rear
+  PARK_CENTER_FRONT  ;Park central front
   M190 S{BED}  ;Set bed temperature and wait
   Nevermore_on  ;Turn on Nevermore
   BED_MESH_CLEAR  ;Clear Bed Mesh
   BED_MESH_CALIBRATE  ;Adaptive Mesh [Auto]
   M109 S{EXTRUDER}  ;Set extruder temperature and wait
   G28 Z  ;Home Z axis
+  {% if TOOL > -1 and printer["trad_rack"] != null %}
+    TR_LOAD_TOOLHEAD LANE={TOOL}
+  {% endif %}
+  SET_PRESSURE_ADVANCE ADVANCE=0.0460
   _ADAPTIVE_PURGE  ;Adaptive Purge
+
 
 
 [gcode_macro _MOVE_AWAY]
@@ -52,6 +78,18 @@ gcode:
     status_ready
     {% endif %}
 
+[gcode_macro M109]
+rename_existing: M109.1
+gcode:
+  {% if printer["gcode_macro status_heating"] != null %}
+    status_heating
+  {% endif %}
+    M109.1 { rawparams }
+  {% if printer["gcode_macro status_ready"] != null %}
+    status_ready
+  {% endif %}
+
+
 [gcode_macro _CHOME]
 gcode:
   {% if printer["gcode_macro status_homing"] != null %}
@@ -75,8 +113,29 @@ gcode:
     status_ready
   {% endif %}
 
+[gcode_macro PARK_CENTER_FRONT]
+gcode:
+    {% set th = printer.toolhead %}
+    {% set x_safe = th.position.x + 20 * (1 if th.axis_maximum.x - th.position.x > 20 else -1) %}
+  {% if printer["gcode_macro status_busy"] != null %}
+    status_busy
+  {% endif %}
+    G0 X{th.axis_maximum.x//2} Y5 F3600  
+  {% if printer["gcode_macro status_ready"] != null %}
+    status_ready
+  {% endif %}
 
 
+##############################
+######### NEVERMORE ##########
+##############################
+[gcode_macro Nevermore_on]
+gcode:
+    SET_FAN_SPEED FAN=nevermore SPEED=1
+
+[gcode_macro Nevermore_off]
+gcode:
+    SET_FAN_SPEED FAN=nevermore SPEED=1
 
 
 [gcode_macro BED_MESH_CALIBRATE]
@@ -224,6 +283,7 @@ gcode:
 # # # Klipper Adaptive Purging - VoronDesign Logo # # #
 # credits: https://github.com/kyleisah/Klipper-Adaptive-Meshing-Purging/blob/main/Configuration/Adaptive_Purge.cfg
 # credits: Insane Version 1.1 - 03-Feb-2023
+
 [gcode_macro _ADAPTIVE_PURGE]
 description: A purge macro that adapts to be near your actual printed objects
 
@@ -232,48 +292,41 @@ variable_z_height: 0.4              # Height above the bed to purge
 variable_tip_distance: 10           # Distance between filament tip and nozzle before purge (this will require some tuning)
 variable_purge_amount: 40           # Amount of filament to purge
 variable_flow_rate: 10              # Desired flow rate in mm3/s
-variable_x_default: 10              # X location to purge, overwritten if adaptive is True
-variable_y_default: 10              # Y location to purge, overwritten if adaptive is True
+variable_x_default: 5              # X location to purge, overwritten if adaptive is True
+variable_y_default: 5              # Y location to purge, overwritten if adaptive is True
 variable_size: 10                   # Size of the logo
-variable_distance_to_object_x: 10   # Distance in x to the print area
-variable_distance_to_object_y: 10   # Distance in y to the print area
-
-### This section is for those who are using Moonraker's Update Manager for KAMP, or want a more verbose macro. ###
-
-variable_display_parameters: True   # Display macro paramters in the console, useful for debugging the SETUP_VORON_PURGE call, or more verbosity.
+variable_distance_to_object_x: 5   # Distance in x to the print area
+variable_distance_to_object_y: 5   # Distance in y to the print area
 
 gcode:
-
-    {% if display_parameters == True %}
-      { action_respond_info("adaptive_enable : %d" % (adaptive_enable))  }
-      { action_respond_info("z_height        : %f" % (z_height))  }
-      { action_respond_info("tip_distance    : %f" % (tip_distance))  }
-      { action_respond_info("purge_amount    : %f" % (purge_amount))  }
-      { action_respond_info("flow_rate       : %f" % (flow_rate))  }
-      { action_respond_info("x_default       : %f" % (x_default))  }
-      { action_respond_info("y_default       : %f" % (y_default))  }
-      { action_respond_info("size            : %f" % (size))  }
-      { action_respond_info("distance_to_object_x : %f" % (distance_to_object_x))  }
-      { action_respond_info("distance_to_object_y : %f" % (distance_to_object_y))  }
-    {% endif %}
-
     {% if adaptive_enable == True %}
         {% set all_points = printer.exclude_object.objects | map(attribute='polygon') | sum(start=[]) %}
         {% set x_origin = (all_points | map(attribute=0) | min | default(x_default + distance_to_object_x + size)) - distance_to_object_x - size %}
         {% set y_origin = (all_points | map(attribute=1) | min | default(y_default + distance_to_object_y + size)) - distance_to_object_y - size %}
         {% set x_origin = ([x_origin, 0] | max) %}
         {% set y_origin = ([y_origin, 0] | max) %}
+        
+         {% if x_origin < x_default %}
+            set x_origin = x_default | float
+         {% endif %}
+         
+         {% if y_origin < y_default %}
+            set y_origin = y_default | float
+         {% endif %}
+
     {% else %}
         {% set x_origin = x_default | float %}
         {% set y_origin = y_default | float %}
     {% endif %}
+    
+  
     {% set purge_move_speed = 2.31 * size * flow_rate / (purge_amount * 2.405) %}
     {% set prepurge_speed = flow_rate / 2.405 %}
     {% set travel_speed = printer.toolhead.max_velocity %}
     { action_respond_info( "x: " + x_origin|string + " y: " + y_origin|string + " purge_move_speed: " + purge_move_speed|string + " prepurge_speed: " + prepurge_speed|string ) }
 
-    G92 E0                                                                              # Reset extruder
-    G0 F{travel_speed*60}                                                               # Set travel speed
+    G92 E0
+    G0 F{travel_speed*5}                                                               # Set travel speed
     G90                                                                                 # Absolute positioning
     G0 X{x_origin} Y{y_origin+size/2}                                                   # Move to purge position
     G0 Z{z_height}                                                                      # Move to purge Z height
@@ -296,40 +349,6 @@ gcode:
     G92 E0                                                                              # Reset extruder distance
     M82                                                                                 # Absolute extrusion mode
     G0 Z{z_height*2}                                                                    # Z hop
-
-
-[gcode_macro M109]
-rename_existing: M109.1
-gcode:
-  {% if printer["gcode_macro status_heating"] != null %}
-    status_heating
-  {% endif %}
-    M109.1 { rawparams }
-  {% if printer["gcode_macro status_ready"] != null %}
-    status_ready
-  {% endif %}
-
-
-[gcode_macro M190]
-rename_existing: M190.1
-gcode:
-  {% if printer["gcode_macro status_heating"] != null %}
-    status_heating
-  {% endif %}
-    M190.1 { rawparams }
-  {% if printer["gcode_macro status_ready"] != null %}
-    status_ready
-  {% endif %}
-
-
-
-[gcode_macro Z_TILT_ADJUST]
-rename_existing: Z_TILT_ADJUST_1
-gcode:
-  {% if printer["gcode_macro status_heating"] != null %}
-    status_leveling
-  {% endif %}
-    Z_TILT_ADJUST_1 { rawparams }
-  {% if printer["gcode_macro status_ready"] != null %}
-    status_ready
-  {% endif %}
+    {% if printer["gcode_macro status_printing"] != null %}
+        status_printing
+    {% endif %}
