--- a/Hardware/toolboard.cfg
+++ b/Hardware/toolboard.cfg
@@ -1,6 +1,8 @@
 ## SB2040设置
 [mcu sb2040]
-canbus_uuid:  fa1c45892a8c
+canbus_uuid:  fc44f309b3d4
+# [mcu sb2040]
+# canbus_uuid:  fa1c45892a8c
 
 [extruder]
 step_pin: sb2040:gpio9
