--- a/Macros/printer_macros.cfg
+++ b/Macros/printer_macros.cfg
@@ -3,46 +3,50 @@
 ####################
 
    
-[gcode_macro PRINT_START]
-gcode:
-    # Parameters
-    {% set BED = params.BED_TEMP|int %}
-    {% set EXTRUDER = params.EXTRUDER_TEMP|int %}
+# [gcode_macro PRINT_START]
+# gcode:
+#     # Parameters
+#     {% set BED = params.BED_TEMP|int %}
+#     {% set EXTRUDER = params.EXTRUDER_TEMP|int %}
     
-    {% set TOOL = params.TOOL|default(-90)|int %}
+#     {% set TOOL = params.TOOL|default(-90)|int %}
     
-    CLEAR_PAUSE
-    SET_TEMP HEATER="bed" TEMP={BED} WAIT=0; set final bed temp
-    #SET_TEMP HEATER="extruder" TEMP=150 WAIT=0; set hotend to 150 for heatsoak
-    DISPLAYTEXT TEXT={TOOL}
-    _CHOME
+#     CLEAR_PAUSE
+#     SET_TEMP HEATER="bed" TEMP={BED} WAIT=0; set final bed temp
+#     #SET_TEMP HEATER="extruder" TEMP=150 WAIT=0; set hotend to 150 for heatsoak
+#     DISPLAYTEXT TEXT={TOOL}
+#     _CHOME
     
     
-    SET_TEMP HEATER="bed" TEMP={BED} WAIT=1 ;wait final bed temp
-    #MATERIAL_PA MATERIAL={MATERIAL}
-    _CZTILT
-    #_CQGL
-    #ZHOME
-    #SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=0 ;wait final extruder temp
-    #CLEAN_NOZZLE
-    Nevermore_on
-    #BED_MESH_PROFILE LOAD=hot5
-    #BED_MESH_CLEAR
-    BED_MESH_CALIBRATE
+#     SET_TEMP HEATER="bed" TEMP={BED} WAIT=1 ;wait final bed temp
+#     #MATERIAL_PA MATERIAL={MATERIAL}
+#     _CZTILT
+#     #_CQGL
+#     #ZHOME
+#     #SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=0 ;wait final extruder temp
+#     #CLEAN_NOZZLE
+#     Nevermore_on
+#     #BED_MESH_PROFILE LOAD=hot5
+#     #BED_MESH_CLEAR
+#     BED_MESH_CALIBRATE
 
-    #SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=0 ;wait final extruder temp
-    #CLEAN_NOZZLE
-    RESET_EXTRUDER  
+#     #SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=0 ;wait final extruder temp
+#     #CLEAN_NOZZLE
+#     RESET_EXTRUDER  
 
-    tr_home
-    SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
-    G28 Z
+#     #tr_home
 
-    #PRIME_LINE
-    #ADAPTIVE_PURGE
-    VORON_PURGE
-    STATUS_READY
-    DISPLAYTEXT TEXT="Printing..."
+#     SET_TEMP HEATER="extruder" TEMP={EXTRUDER} WAIT=1 ;wait final extruder temp
+    
+#     G28 Z
+#     #GIANO_FILAMENT_1
+#     #PRIME_LINE
+#     #ADAPTIVE_PURGE
+    
+
+#     #VORON_PURGE
+#     STATUS_READY
+#     DISPLAYTEXT TEXT="Printing..."
     
    
 
