--- a/moonraker.conf
+++ b/moonraker.conf
@@ -73,3 +73,16 @@ managed_services:
 origin: https://github.com/gab-3d/Gab3d-Klipper-Utilities.git
 install_script: install.sh
     
+
+
+[update_manager Giano_StealthBurner_Dual_Filament]
+type: git_repo
+channel: beta
+primary_branch: main
+path: ~/Giano_StealthBurner_Dual_Filament
+managed_services:
+    klipper
+    moonraker
+origin: https://github.com/FBServiceTech3D/Giano_StealthBurner_Dual_Filament.git
+install_script: install.sh
+    
