--- a/printer.cfg
+++ b/printer.cfg
@@ -1,3 +1,4 @@
+
 [include shell_command.cfg]
 [include gab-3d-utilities.cfg]
 
@@ -6,6 +7,7 @@
 serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 
 [exclude_object]
+
 
 ##################
 #### Hardware ####
@@ -42,16 +44,16 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 ###################
 #### Trad Rack ####
 ###################
-[include Hardware/trad_rack.cfg]
-[include Macros/trad_rack_optional.cfg]
+#[include Hardware/trad_rack.cfg]
+#[include Macros/trad_rack_optional.cfg]
 
+
+############################################
+#### Giano_StealthBurner_Dual_Filament  ####
+############################################
+[include giano.cfg]
 
 [include Macros/start.cfg]
-
-
-
-
-#[include giano.cfg]
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
@@ -95,7 +97,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# max_x = 220.0
 #*#
 #*# [probe]
-#*# z_offset = -0.650
+#*# z_offset = -0.750
 #*#
 #*# [bed_mesh Freddo]
 #*# version = 1
@@ -119,17 +121,17 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_3F0039000450565843333620-if00
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.012812, -0.029687, -0.041250
-#*# 	  -0.005313, 0.000000, -0.041250
-#*# 	  -0.009063, -0.050625, -0.033438
+#*# 	  0.032092, 0.014904, 0.042717
+#*# 	  0.005842, 0.014279, -0.009783
+#*# 	  -0.033221, 0.004592, -0.022283
 #*# tension = 0.2
-#*# min_x = 77.71
+#*# min_x = 48.37
 #*# algo = lagrange
 #*# y_count = 3
 #*# mesh_y_pps = 2
-#*# min_y = 110.7
+#*# min_y = 108.23
 #*# x_count = 3
-#*# max_y = 139.28
+#*# max_y = 139.29
 #*# mesh_x_pps = 2
 #*# max_x = 139.29
 #*#
