--- a/Hardware/Probe.cfg
+++ b/Hardware/Probe.cfg
@@ -86,7 +86,7 @@ fade_start: 0.6
 fade_end: 10.0
 probe_count: 5,5
 algorithm: bicubic
-relative_reference_index: 13
+zero_reference_position: 125, 125
 
 [gcode_macro BED_MESH_CLEAR]
 rename_existing: _BED_MESH_CLEAR
