--- a/Hardware/octopus.cfg
+++ b/Hardware/octopus.cfg
@@ -16,10 +16,13 @@ pressure_advance: 0.045
 pressure_advance_smooth_time: 0.040
 max_extrude_only_distance: 200
 max_extrude_cross_section: 50.0
-sensor_type: ATC Semitec 104NT-4-R025H42G
+sensor_type: ATC Semitec 104NT-4-R025H42G #rapido
+#sensor_type: Generic 3950 #masp
 microsteps: 32
 full_steps_per_rotation: 200                                       # Set to 200 for LDO 1.8° stepper motor, and set to 400 for OMC(StepperOnline) 0.9° stepper motor
-rotation_distance: 5.7                                            # See calibrating rotation_distance on extruders doc
+# rotation_distance: 5.7   #lgx lite                                           # See calibrating rotation_distance on extruders doc
+rotation_distance: 22.6789511 # stealth
+gear_ratio: 50:10 # stealth
 min_extrude_temp: 10
 
 [tmc2209 extruder]
