--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -19,34 +19,70 @@ params: {"script":"SHUTDOWN"}
 
 
 
-[menu __main tr]
-name: {{ gettext('TR') }}
+# [menu __main tr]
+# name: {{ gettext('TR') }}
+# icon: home
+
+# [menu __main tr tr_home]
+# name: Trad Home
+# icon: shutdown
+# method: printer.gcode.script
+# params: {"script":"tr_home"}
+
+# [menu __main tr Unload]
+# name: Unload
+# icon: shutdown
+# method: printer.gcode.script
+# params: {"script":"TR_UNLOAD_TOOLHEAD"}
+
+# [menu __main tr load_0]
+# name: Load 0
+# icon: shutdown
+# method: printer.gcode.script
+# params: {"script":"TR_LOAD_LANE LANE=0"}
+
+
+# [menu __main tr load_1]
+# name: Load 1
+# icon: shutdown
+# method: printer.gcode.script
+# params: {"script":"TR_LOAD_LANE LANE=1"}
+
+
+[menu __main giano]
+name: {{ gettext('Giano') }}
+icon: toolchanger
+
+[menu __main giano GIANO_home]
+name: Giano Home
 icon: home
-
-[menu __main tr tr_home]
-name: Trad Home
-icon: shutdown
 method: printer.gcode.script
-params: {"script":"tr_home"}
+params: {"script":"GIANO_HOME"}
 
-[menu __main tr Unload]
-name: Unload
-icon: shutdown
+[menu __main giano GIANO_EJECT]
+name: Eject
+icon: toolchanger
 method: printer.gcode.script
-params: {"script":"TR_UNLOAD_TOOLHEAD"}
+params: {"script":"GIANO_EJECT"}
 
-[menu __main tr load_0]
-name: Load 0
-icon: shutdown
+[menu __main giano GIANO_FILAMENT_1]
+name: Filament 1
+icon: extruder-1
 method: printer.gcode.script
-params: {"script":"TR_LOAD_LANE LANE=0"}
+params: {"script":"GIANO_FILAMENT_1"}
 
 
-[menu __main tr load_1]
-name: Load 1
-icon: shutdown
+[menu __main giano GIANO_FILAMENT_2]
+name: Filament 2
+icon: extruder-2
 method: printer.gcode.script
-params: {"script":"TR_LOAD_LANE LANE=1"}
+params: {"script":"GIANO_FILAMENT_2"}
+
+[menu __main giano SHAPE_TIP]
+name: Shape Tip
+icon: extruder-2
+method: printer.gcode.script
+params: {"script":"FORM_TIP"}
 
 
 
