--- a/Macros/start.cfg
+++ b/Macros/start.cfg
@@ -35,6 +35,7 @@ gcode:
   {% set EXTRUDER = params.EXTRUDER_TEMP|int %}
   {% set TOOL = params.TOOL|default(-90)|int %}
 
+  M140 S{BED}  ;Set bed temperature 
   _CHOME  ;Home all axes fi not already homed
   _CZTILT  ;Z Tilt if not done
   G0 Z30  ;Move Up
@@ -49,6 +50,7 @@ gcode:
     TR_LOAD_TOOLHEAD LANE={TOOL}
   {% endif %}
   SET_PRESSURE_ADVANCE ADVANCE=0.0460
+  T{TOOL}
   _ADAPTIVE_PURGE  ;Adaptive Purge
 
 
