--- a/giano.cfg
+++ b/giano.cfg
@@ -1,45 +1,15 @@
 # -------------------------------------										
-# Toolhead Filament Sensor
-# -------------------------------------										
-[filament_switch_sensor toolhead_filament_sensor]
-pause_on_runout: False
-event_delay: 0.1
-switch_pin:  ^PG15
-
-# -------------------------------------										
 #  GIANO CONFIGURATION
-# -------------------------------------										
-[giano]
-heater_timeout: 6000                            # Heater Timeout in case of giano paused the print
+# -------------------------------------
 
-unload_filament_after_print: 1                  # 1 = unloads filament after printing has finished
-                                                # 0 = filament stays in hotend
+[mcu gianomcu]
+##  this is fixwd should not be changed for big dipper
+serial: /dev/serial/by-id/usb-Klipper_rp2040_E66138935F188C29-if00
 
-wipe_tower_acceleration: 5000                   # printer acceleration when printing the wipe tower
+[temperature_sensor FLY-RPFMEX]
+sensor_type: temperature_mcu
+sensor_mcu: gianomcu
 
-use_ooze_ex: 1                                  # 1 = giano distributes oozed material over the length of the wipe tower
-                                                # 0 = try your luck 
-
-use_filament_caching: 1                         # 1 = giano caches the filament right behind the toolhead sensor instead of completely unloading it
-                                                # 0 = no caching
-
-extruder_push_and_pull_test: 1                  # 1 = test if filament could successfully loaded into extruder
-                                                # 0 = do not test
-
-#filament_groups: 1:2,4:5                        # filament cache configuration, this tells giano which filament arrives in which bowden tube to the hotend
-
-nozzle_loading_speed_mms: 10                    # extruder speed when moving the filament between the parking position and the nozzle 
-filament_homing_speed_mms: 50                   # extruder speed when moving the filament inside bowden tube
-filament_parking_speed_mms: 50                  # extruder speed when moving the filament between the filament sensor and the parking position
-
-parking_position_to_nozzle_mm: 50               # distance between the parking position and the nozzle
-toolhead_sensor_to_bowden_cache_mm: 75          # distance between the filament sensor and the filament caching position
-toolhead_sensor_to_bowden_parking_mm: 500       # distance between the filament sensor and the filament parking position
-extruder_gear_to_parking_position_mm: 40        # distance between the extruder gears and the parking position
-toolhead_sensor_to_extruder_gear_mm: 15         # distance between the filament sensor and the extruder gears
-tool_count: 2                                   # number of feeding extruders
-giano_setup: 0                                   # 0 = multi extruder to direct extruder
-                                                # 1 = mmu splitter
 
 
 [extruder]
@@ -54,49 +24,55 @@ max_extrude_cross_section: 999999
 # M4 Voron
 # -------------------------------------										
 
+## M0
 [extruder_stepper giano_extruder_1]
 extruder:
-step_pin: PE6
-dir_pin: !PA14
-enable_pin: !PE0
-microsteps: 64
-rotation_distance: 22.6789511
+step_pin: gianomcu: gpio6
+dir_pin: gianomcu: gpio5
+enable_pin: !gianomcu: gpio9
+microsteps: 32
 full_steps_per_rotation: 200
-gear_ratio: 80:20
+rotation_distance: 22.6789511 
+gear_ratio: 50:17  
+
+
 
 [tmc2209 extruder_stepper giano_extruder_1]
-uart_pin: PD3
-run_current: 0.6
-stealthchop_threshold: 0
+uart_pin: gianomcu: gpio7
+run_current: 1.000
+stealthchop_threshold: 999999
 interpolate: False
-driver_TBL: 1
-driver_TOFF: 3
-driver_HEND: 9
-driver_HSTRT: 7
+# driver_TBL: 1
+# driver_TOFF: 3
+# driver_HEND: 9
+# driver_HSTRT: 7
 
 # -------------------------------------										
 # Giano Extruder 2
 # M4 Voron
-# -------------------------------------										
+# -------------------------------------		
+
+## M1
 [extruder_stepper giano_extruder_2]
 extruder:
-step_pin: PE2
-dir_pin: !PE3
-enable_pin: !PD4
-microsteps: 64
-rotation_distance: 22.6789511
+step_pin: gianomcu: gpio1
+dir_pin: !gianomcu: gpio0
+enable_pin: !gianomcu: gpio4
+microsteps: 32
 full_steps_per_rotation: 200
-gear_ratio: 80:20
+rotation_distance: 22.6789511 
+gear_ratio: 50:17  
+
 
 [tmc2209 extruder_stepper giano_extruder_2]
-uart_pin: PE1
-run_current: 0.6
-stealthchop_threshold: 0
+uart_pin: gianomcu: gpio2
+run_current: 1.0
+stealthchop_threshold: 999999
 interpolate: False
-driver_TBL: 1
-driver_TOFF: 3
-driver_HEND: 9
-driver_HSTRT: 7
+# driver_TBL: 1
+# driver_TOFF: 3
+# driver_HEND: 9
+# driver_HSTRT: 7
 
 
 # # -------------------------------------										
@@ -123,8 +99,14 @@ driver_HSTRT: 7
 #     F_INSERT TOOL=2
 # switch_pin: ^PA4
 
-
-
+# -------------------------------------										
+# Toolhead Filament Sensor
+# -------------------------------------										
+[filament_switch_sensor toolhead_filament_sensor]
+pause_on_runout: False
+event_delay: 0.1
+#switch_pin: ^gianomcu:  gpio27
+switch_pin: ^sb2040: gpio29
 
 # # -------------------------------------										
 # # Y1 Filament Sensor
@@ -142,87 +124,101 @@ driver_HSTRT: 7
 # event_delay: 0.1
 # switch_pin: ^!PG14
 
+# -------------------------------------										
+#  GIANO CONFIGURATION
+# -------------------------------------										
+[giano]
+pre_unload_gcode:
+  #TEst
+  M118 unload_gcode
+  {% set z_max = printer.toolhead.axis_maximum.z %}
+  {% set z_up=0.2 %}
+  {% set purge_x = 216 %}
+  {% set purge_y = 250 %}
+  {% set purge_z = 5 %}
+  SAVE_GCODE_STATE NAME=PRE_unload_state
+  
+  SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=z VALUE={printer.toolhead.position.z+z_up}
+  SET_GCODE_VARIABLE MACRO=Wipe_Nozzle VARIABLE=state_saved VALUE={True}
+  # move up to avoid crashing into the print
+  {% if printer.toolhead.position.z + z_up < z_max %}
+        G91             # relative positioning
+        G1 Z{z_up}    # lift z
+  {% else %}
+        G90             # absolute positioning
+        G1 Z{z_max}     # lift z to max position
+  {% endif %}
 
-# ---------------------------------------------
-# Unload from nozzle to parking position
-# CHC Pro
-# Prusament ASA
-# ---------------------------------------------
-[gcode_macro _UNLOAD_FROM_NOZZLE_TO_PARKING_POSITION]
-variable_parameter_PAUSE : 3000
-gcode:
-  # reset speed
-  M220 S100
-  # initial retract
-  G92 E0
-  G0 E-25 F5000
-  G4 P500
-  # move to parking position, the center of the ptfe tube that goes to your hotend
-  G92 E0
-  G0 E-20 F3600
-  G4 P{params.PAUSE|default(3000)|int}
-  # wait for movements
+  # move to purge position
+
+  G90 # absolute positioning
+  G1 X{purge_x} Y{purge_y} F10000
+  G1 Z{purge_z} F1500
+
+  # make filament tip
+  form_tip COOLING_TUBE_LENGTH=22 COOLING_TUBE_POSITION=19 INITIAL_COOLING_SPEED=20 FINAL_COOLING_SPEED=100 COOLING_MOVES=4 USE_SKINNYDIP=1 USE_FAST_SKINNYDIP=0 SKINNYDIP_DISTANCE=30 DIP_INSERTION_SPEED=30 DIP_EXTRACTION_SPEED=100 MELT_ZONE_PAUSE=0 COOLING_ZONE_PAUSE=1000 UNLOADING_SPEED_START=100 UNLOADING_SPEED=30 RAMMING_VOLUME=0 FINAL_EJECT=0 SS_RAMMING=0
   M400
 
+post_load_gcode:
+  {% set state_saved = printer["gcode_macro Wipe_Nozzle"].state_saved %}
+  M118 load_gcode
+  
+  Wipe_Nozzle
+  G1 Z{printer["gcode_macro Wipe_Nozzle"].z} F1500
+  M400
+  {% if state_saved %}
+    RESTORE_GCODE_STATE NAME=PRE_unload_state RESTORE_GCODE_STATE=200
+  {% endif %}
+  
+tool_count: 2                                   # number of feeding extruders
+debug_level: 2                                  # 0 no debug, 1 normal, 2 verbose, 3 All commands
+unload_filament_after_print: 0                  # 1 = unloads filament after printing has finished
+                                                # 0 = filament stays in hotend
+use_filament_caching: 1                         # 1 = giano caches the filament right behind the toolhead sensor instead of completely unloading it
+                                                # 0 = no caching
+extruder_push_and_pull_test: 0                  # 1 = test if filament could successfully loaded into extruder
+                                                # 0 = do not test
+
+nozzle_loading_speed_mms: 10                    # extruder speed when moving the filament between the parking position and the nozzle 
+filament_homing_speed_mms: 20                   # extruder speed when moving the filament inside bowden tube
+filament_parking_speed_mms: 20                  # extruder speed when moving the filament between the filament sensor and the parking position
+
+parking_position_to_nozzle_mm: 50               # distance between the parking position and the nozzle
+toolhead_sensor_to_bowden_cache_mm: 52          # distance between the filament sensor and the filament caching position
+toolhead_sensor_to_bowden_parking_mm: 70       # distance between the filament sensor and the filament parking position
+extruder_gear_to_parking_position_mm: 49.5        # distance between the extruder gears and the parking position
+toolhead_sensor_to_extruder_gear_mm: 20.5         # distance between the filament sensor and the extruder gears
 
 # ---------------------------------------------
 #  Exposing macros to the UI
 # ---------------------------------------------
-[gcode_macro GIANO_LOAD_TOOL]
-variable_parameter_TOOL : 1
-variable_parameter_TEMP : -1
+
+[gcode_macro GIANO_FILAMENT_1]
 gcode:
-  LOAD_TOOL TOOL={params.TOOL|default(1)|int} TEMP={params.TEMP|default(-1)|int}
+  T0
+  M400
 
-
-[gcode_macro GIANO_UNLOAD_TOOL]
-variable_parameter_TOOL : -1
-variable_parameter_TEMP : -1
+[gcode_macro GIANO_FILAMENT_2]
 gcode:
-  UNLOAD_TOOL TOOL={params.TOOL|default(-1)|int} TEMP={params.TEMP|default(-1)|int}
+  T1
+  M400
 
-
-[gcode_macro GIANO_SELECT_TOOL]
+[gcode_macro GIANO_EJECT]
 variable_parameter_TOOL : -1
 gcode:
-  SELECT_TOOL TOOL={params.TOOL|default(-1)|int}
+  G_EJECT TOOL={params.TOOL|default(-1)|int}
 
 
-[gcode_macro GIANO_EJECT_TOOL]
-variable_parameter_TOOL : -1
+[gcode_macro GIANO_LOAD_ALL_FILAMENTS]
 gcode:
-  EJECT_TOOL TOOL={params.TOOL|default(-1)|int}
+  G_LOAD_FILAMENTS
 
-
-[gcode_macro PAUSE_GIANO]
+[gcode_macro GIANO_HOME]
 gcode:
-  _PAUSE_GIANO
-
-
-[gcode_macro RESUME_GIANO]
-gcode:
-  _RESUME_GIANO
-
-
-[gcode_macro LOAD_ALL_FILAMENTS]
-gcode:
-  LOAD_FILAMENTS
-
-[gcode_macro SET_INFINITE_SPOOL]
-gcode:
-  _SET_INFINITE_SPOOL
-
-# ---------------------------------------------
-#  RatOS integration
-# ---------------------------------------------
-[gcode_macro _START_PRINT_AFTER_HEATING_EXTRUDER]
-variable_tool: -1
-gcode:
-  {% if tool >= 0 %}
-    LOAD_TOOL TOOL={tool} SENSOR=1 TEMP=-1
-  {% endif %}
-
-
+  G_HOME
+# [gcode_macro GIANO_TEST]
+# gcode:
+#   Z_HOME_TEST
 
 # ---------------------------------------------
 #  Pause / Resume
@@ -242,59 +238,140 @@ gcode:
   RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=600
   {printer.configfile.settings['gcode_macro resume'].rename_existing}
 
-
-# -------------------------------------										
-# Extruder Notifications
-# -------------------------------------										
-[gcode_macro _SELECT_EXTRUDER]
+# ---------------------------------------------
+#  Bambu like
+# ---------------------------------------------
+[gcode_macro Wipe_Nozzle]
+variable_z:             100
+variable_state_saved:   False
 gcode:
-  M118 selecting extruder {params.EXTRUDER} 
-  # put your custom gcode here 
-  # in case you you want to control some status LEDs 
+    {% set purge_x = 216 %}
+    {% set purge_y = 250 %}
+    {% set purge_z = 5 %}
+    {% set purge_amount = 25 %}
 
-[gcode_macro _EXTRUDER_SELECTED]
+    {% set brush_first_x = 174 %}
+    {% set brush_first_y = 249 %}
+    {% set brush_first_z = 5 %}
+    {% set brush_second_x = 212 %}
+    {% set brush_second_y = 249 %}
+    {% set brush_second_z = 5 %}
+    
+
+
+    G90
+    G1 X{purge_x} Y{purge_y} F10000
+    G1 ZX{purge_z} F1500
+    M83      ; relative mode
+    G1 E{purge_amount} F200
+    #G1 E-1 F500
+    G4 P2000
+    G1 Z{brush_first_z} F1500
+    G92 E0   ; reset extruder
+    {% for wipes in range(1,3) %}
+         G1 X{brush_first_x} Y{brush_first_y} Z{brush_first_z} F10000
+         G1 X{brush_second_x} Y{brush_second_y} Z{brush_second_z} F10000
+    {% endfor %}
+    G1 X{brush_second_x} Y{brush_second_y} Z{brush_second_z} F10000
+    #G1 X{purge_x} Y{purge_y} F10000
+    G1 ZX{purge_z} F1500
+
+
+[gcode_macro FORM_TIP]
+description: Generic tip forming macro
 gcode:
-  M118 Extruder {params.EXTRUDER} selected
-  # put your custom gcode here 
-  # in case you you want to control some status LEDs 
+    {% set COOLING_TUBE_LENGTH = params.COOLING_TUBE_LENGTH|default(10) %} # Dragon ST: 15, Dragon HF: 10, Mosquito: 20
+    {% set COOLING_TUBE_RETRACTION = params.COOLING_TUBE_RETRACTION|default(30) %} # Dragon ST: 35, Dragon HF: 30, Mosquito: 38
+    {% set INITIAL_COOLING_SPEED = params.INITIAL_COOLING_SPEED|default(10) %}
+    {% set FINAL_COOLING_SPEED = params.FINAL_COOLING_SPEED|default(50) %}
+    {% set COOLING_MOVES = params.COOLING_MOVES|default(3) %}
+    {% set TOOLCHANGE_TEMP = params.TOOLCHANGE_TEMP|default(0) %}
+    {% set USE_SKINNYDIP = params.USE_SKINNYDIP|default(0) %}
+    {% set USE_FAST_SKINNYDIP = params.USE_FAST_SKINNYDIP|default(1) %}
+    {% set SKINNYDIP_DISTANCE = params.SKINNYDIP_DISTANCE|default(22) %}
+    {% set DIP_INSERTION_SPEED = params.DIP_INSERTION_SPEED|default(33) %}
+    {% set DIP_EXTRACTION_SPEED = params.DIP_EXTRACTION_SPEED|default(40) %}
+    {% set MELT_ZONE_PAUSE = params.MELT_ZONE_PAUSE|default(0) %}
+    {% set COOLING_ZONE_PAUSE = params.COOLING_ZONE_PAUSE|default(0) %}
+    {% set UNLOADING_SPEED_START = params.UNLOADING_SPEED_START|default(40) %}
+    {% set UNLOADING_SPEED = params.UNLOADING_SPEED|default(20) %}
+    {% set RAMMING_VOLUME = params.RAMMING_VOLUME|default(0) %} # in mm3
+    {% set INITIAL_RETRACT = params.INITIAL_RETRACT|default(0) %} # Use an initial retract or not. Don't use it if you want to ram the filament
+    {% set FINAL_EJECT = params.FINAL_EJECT|default(0) %} # Fully eject the filament afterwards, default is no
 
-[gcode_macro _EXTRUDER_ERROR]
-gcode:
-  M118 Extruder {params.EXTRUDER} error
-  # put your custom gcode here 
-  # in case you you want to control some status LEDs 
+    G91
+    G92 E0
 
-[gcode_macro _CONTINUE_PRINTING]
-gcode:
-  M118 Continue printing with extruder {params.EXTRUDER}
-  # put your custom gcode here 
-  # in case you you want to control some status LEDs 
+    SET_PRESSURE_ADVANCE ADVANCE=0
+    {% set OLD_TEMP = printer.extruder.target %}
 
+    # Ramming with SuperSlicer standard setting
+    {% if INITIAL_RETRACT|int == 1 %}
+        G1 E-8.5000 F3000
+    {% endif %}
 
-# -------------------------------------										
-# Auto loader 
-# -------------------------------------										
-[gcode_macro _AUTOLOAD_RESUME_AFTER_INSERT]
-gcode:
-  M118 Filament {params.TOOL} inserted
-  # put your custom gcode here 
-  # in case you have a nozzle wiper or a similar solution 
-  RESUME 
+    {% set RATIO = (RAMMING_VOLUME|float) /23.0 %}
 
-[gcode_macro _INFINITE_RESUME_AFTER_SWAP]
-gcode:
-  M118 Spool replaced with Filament {params.TOOL}
-  # put your custom gcode here 
-  # in case you have a nozzle wiper or a similar solution 
-  RESUME 
+    G1 E{0.5784 * RATIO|float} F299 #7
+    G1 E{0.5834 * RATIO|float} F302 #3
+    G1 E{0.5918 * RATIO|float} F306 #6
+    G1 E{0.6169 * RATIO|float} F319 #6
+    G1 E{0.3393 * RATIO|float} F350 #0
+    G1 E{0.3363 * RATIO|float} F350 #0
+    G1 E{0.7577 * RATIO|float} F392 #6
+    G1 E{0.8382 * RATIO|float} F434 #3
+    G1 E{0.7776 * RATIO|float} F469 #9
+    G1 E{0.1293 * RATIO|float} F469 #9
+    G1 E{0.9673 * RATIO|float} F501 #2
+    G1 E{1.0176 * RATIO|float} F527 #2
+    G1 E{0.5956 * RATIO|float} F544 #6
+    G1 E{0.4555 * RATIO|float} F544 #6
+    G1 E{1.0662 * RATIO|float} F552 #4
 
+    # set toolchange temperature just prior to filament being extracted from melt zone and wait for set point
+    # (SKINNYDIP--normal mode only)
+    {% if TOOLCHANGE_TEMP|float > 0 and USE_FAST_SKINNYDIP|int == 0 %}
+       M109 S{TOOLCHANGE_TEMP}
+    {% endif %}
 
-[gcode_macro START_PRINT_GIANO]
-gcode:
-  {% set BED_TEMP = params.BED_TEMP|default(0)|float %}
-  {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
-  {% set TOOL = params.LANE|default(-1)|int %}
-  G28
-  SET_PRESSURE_ADVANCE ADVANCE=0.065 SMOOTH_TIME=0.04 EXTRUDER=giano_extruder_1
-  SET_PRESSURE_ADVANCE ADVANCE=0.065 SMOOTH_TIME=0.04 EXTRUDER=giano_extruder_2
-  CHANGE_TOOL TOOL={TOOL}
+    # Retraction
+    {% set TOTAL_RETRACTION_DISTANCE = COOLING_TUBE_RETRACTION|float + COOLING_TUBE_LENGTH|float / 2 - 15 %}
+    G1 E-15 F{1.0 * UNLOADING_SPEED_START|float * 60}
+    G1 E-{0.7 * TOTAL_RETRACTION_DISTANCE} F{1.0 * UNLOADING_SPEED|float * 60}
+    G1 E-{0.2 * TOTAL_RETRACTION_DISTANCE} F{0.5 * UNLOADING_SPEED|float * 60}
+    G1 E-{0.1 * TOTAL_RETRACTION_DISTANCE} F{0.3 * UNLOADING_SPEED|float * 60}
+
+    {% if TOOLCHANGE_TEMP|float > 0 and USE_FAST_SKINNYDIP|int == 1 %}
+       M104 S{TOOLCHANGE_TEMP}
+    {% endif %}
+
+    # Generate Cooling Moves
+    {% set SPEED_INC = (FINAL_COOLING_SPEED|float - INITIAL_COOLING_SPEED|float) / (2 * COOLING_MOVES|float - 1) %}
+    {% for move in range(COOLING_MOVES|int) %}
+      G1 E{COOLING_TUBE_LENGTH} F{(INITIAL_COOLING_SPEED|float + SPEED_INC*move*2) * 60}
+      G1 E-{COOLING_TUBE_LENGTH} F{(INITIAL_COOLING_SPEED|float + SPEED_INC*(move*2+1)) * 60}
+    {% endfor %}
+
+    # wait for extruder to reach toolchange temperature after cooling moves complete (SKINNYDIP--fast mode only)
+    {% if TOOLCHANGE_TEMP|float > 0 and USE_FAST_SKINNYDIP|int == 1 %}
+        M109 S{TOOLCHANGE_TEMP}
+    {% endif %}
+
+    # Generate a skinnydip move
+    {% if USE_SKINNYDIP|int == 1 %}
+      G1 E{SKINNYDIP_DISTANCE} F{DIP_INSERTION_SPEED|float * 60}
+      G4 P{MELT_ZONE_PAUSE}
+      G1 E-{SKINNYDIP_DISTANCE} F{DIP_EXTRACTION_SPEED|float * 60}
+      G4 P{COOLING_ZONE_PAUSE}
+    {% endif %}
+
+    {% if TOOLCHANGE_TEMP|float > 0 %}
+      M104 S{OLD_TEMP}
+    {% endif %}
+
+    {% if FINAL_EJECT|int == 1 %}
+        G92 E0
+        G1 E-80 F3000
+    {% endif %}
+
+    G92 E0
